[Python]자료형 수정

--- a/_posts/2020-05-17-[Python]자료형.md
+++ b/_posts/2020-05-17-[Python]자료형.md
@@ -10,3 +10,1572 @@ category: [Python]
 <!-- more -->
 
 <hr>
+
+
+# 숫자형
+---
+숫자형이란 숫자 형태로 이루어진 자료형으로 10진수 외에 8진수나 16진수가 존재한다.
+
+|항목|예|
+|---|---|
+|정수|123, -485|
+|실수|123.44, -78.5|
+|8진수|0o34, 0o25|
+|16진수|0x2A, 0xFF|
+
+## 정수형
+---
+정수형(Integer)이란 정수를 뜻하는 자료형을 말한다.
+```python
+>>> a = 3
+>>> b = 5
+>>> a
+3
+>>> b
+5
+```
+
+## 실수형
+---
+실수형(Floating-point)이란 소수점이 포함된 숫자를 말한다.
+```python
+>>> a = 1.2
+>>> b = -4.56
+>>> a
+1.2
+>>> b
+-4.56
+```
+
+## 8진수와 16진수
+---
+8진수(Octal)는 `0o` 로 시작한다.
+```python
+>>> a = 0o17
+>>> a
+15
+```
+16진수(Hexadecimal)는 `0x`로 시작한다.
+```python
+>>> a = 0xff
+>>> b = 0xfa
+>>> a
+255
+>>> b
+250
+```
+
+## 연산자
+---
+
+### 사칙연산(+,-,*,/)
+---
+변수끼리 사칙연산을 수행할 수 있다.
+```python
+>>> a = 3
+>>> b = 5
+>>> a + b
+8
+>>> a * b
+15
+>>> a / b
+0.6
+>>> a - b
+-2
+```
+### 제곱(**)
+---
+제곱을 표현하기 위한 연산자이다.  
+`3 ** 5` 의 경우 2의 3제곱을 의미한다.
+```python
+>>> 3 ** 5
+243
+```
+
+### 나머지(%)
+---
+나눗셈의 나머지 값을 위한 연산자이다.
+`7 % 3` 의 경우 7을 3으로 나눈 나머지 1을 의미한다.
+```python
+>>> 7 % 3
+1
+>>> 3 % 8
+3
+```
+
+### 몫(//)
+---
+나눗셈의 몫 값을 위한 연산자이다.
+`7 % 4` 의 경우 7을 3으로 나눈 몫 1을 의미한다.
+```python
+>>> 7 // 4
+1
+```
+
+# 문자열
+---
+문자열(String)이란 문자, 단어 등으로 구성된 문자들의 집합을 의미한다.  
+
+## 문자열 선언
+---
+파이썬에서 문자열을 표현하기 위해서는 아래와 같이 4가지 방법이 있다.  
+`큰따옴표(")`, `작은따옴표(')`, `큰따옴표 3개(""")`, `작은따옴표 3개(''')`
+
+```python
+>>> string = "Hello World"
+>>> string = 'Hello World'
+>>> string = """Hello World"""
+>>> string = '''Hello World'''
+>>> string
+'Hello World'
+```
+
+### 문자열에 따옴표 포함
+---
+문자열에 따옴표를 포함하고 싶은 경우가 있다.
+- 작은따옴표 포함  
+작은 따옴표를 포함하기 위해서는 큰따옴표로 문자열을 만든다.
+```python
+>>> test = "Python's favorite food is perl"
+>>> test
+"Python's favorite food is perl"
+```
+- 큰따옴표 포함  
+큰 따옴표를 포함하기 위해서는 작은따옴표로 문자열을 만든다.
+```python
+>>> test = '"Python is very easy." he says.'
+>>> test
+'"Python is very easy." he says.'
+```
+- `\`를 사용하여 따옴표 포함  
+`\'`, `\"` 를 이용하여 문자열에 큰따옴표나 작은따옴표를 포함시킬 수 있다.
+```python
+>>> test = 'python\'s favorite food is perl'
+>>> test
+"python's favorite food is perl"
+>>> test = "\"python is very simple\" he said"
+>>> test
+'"python is very simple" he said'
+```
+
+### 여러 줄의 문자열을 하나의 변수에 선언
+---
+- `\n` 사용
+```python
+>>> multiline = "python \nmultiline is \neasy"
+
+
+>>> multiline = '''
+    python 
+    multiline is 
+    easy
+    '''
+>>> multiline = """
+    python 
+    multiline is 
+    easy
+    """
+>>> print(multiline)
+'''
+python
+multiline is
+easy
+'''
+```
+
+## 문자열 연산
+---
+다른 언어와 달리 파이썬에서는 문자열을 더하거나 곱할 수 있다.
+
+### 문자열 덧셈
+---
+`a + b` 의 경우 a와 b 문자열을 합치라는 의미이다.
+```python
+>>> head = "yang"
+>>> body = "sanggil"
+>>> head + body
+'yangsanggil'
+```
+결과를 보면 알 수 있듯이 문자열 두 개가 `+` 연산으로 인해 합쳐졌다.
+
+### 문자열 곱셈
+---
+`a * 5`의 경우 a 문자열을 5번 반복하라는 의미이다.
+```python
+>>> a = "sanggil"
+>>> a * 2
+'sanggilsanggil'
+```
+결과를 보면 알 수 있듯이 `a`라는 문자열을 2번 반복하라는 의미이다. 
+
+또한, 아래와 같이 응용할 수 있다.
+```python
+>>> a = "=" * 50
+>>> b = "\nPython\n"
+>>> c = "=" * 50
+>>> print(a + b + c)
+'''
+==================================================
+Python
+==================================================
+'''
+```
+
+a = "Life is too short"  
+print(len(a))
+> 17
+
+## 문자열 인덱싱/슬라이싱
+---
+### 인덱싱
+---
+인덱싱이란 무엇인가를 '가리킨다는 의미이다. 다시 말해서 문자열에서 어떤 글자나 특정 위치를 가리키는 것을 말한다.
+
+|H|e|l|l|o|,| |P|y|t|h|o|n|!|
+|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
+|0|1|2|3|4|5|6|7|8|9|10|11|12|13|
+
+파이썬에서 숫자를 셀 때 0부터 센다.
+
+아래 예제에서 처럼 a[1]이라는 것은 a 문자열에서 첫번째 위치에 있는 문자를 의미한다.
+```python
+>>> a = "Hello, Python!"
+>>> a[1]
+'e'
+
+>>> a[8]
+'y'
+```
+
+인덱스 값에 음수를 넣으면 어떻게 될까?
+```python
+>>> a[-1]
+'!'
+
+>>> a[-2]
+'n'
+
+>>> a[-6]
+'y'
+```
+a[-1]의 값은 a[13]의 값과 같고,
+a[-2]의 값은 a[12], a[-6]의 값은 a[8]과 같음을 알 수 있다.
+
+즉, 음수의 경우는 뒤에서부터 숫자를 세며 -1부터 센다.
+
+|H|e|l|l|o|,| |P|y|t|h|o|n|!|
+|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
+|0|1|2|3|4|5|6|7|8|9|10|11|12|13|
+|-14|-13|-12|-11|-10|-9|-8|-7|-6|-5|-4|-3|-2|-1|
+
+### 슬라이싱
+---
+슬라이싱이란 잘라낸다는 의미이다. 다시 말해서, 문자열에서 무엇인가를 잘라내는 것이다.
+
+|H|e|l|l|o|,| |P|y|t|h|o|n| |W|o|r|l|d|!|
+|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
+|0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|
+|-20|-19|-18|-17|-16|-15|-14|-13|-12|-11|-10|-9|-8|-7|-6|-5|-4|-3|-2|-1|
+
+위 문자열에서 `Python`이라는 문자열을 추출하기 위해서 슬라이싱을 사용한다.
+```python
+>>> a = "Hello, Python World!"
+>>> a[7:13] 
+'Python'
+```
+a[7:13]의 의미는 a 문자열에서 7번 문자부터 13번 앞의 문자(12번)까지 추출하는 것을 의미한다.  
+따라서, a[7:13]의 의미는 `7 <= a < 13`와 같다.
+
+`a[시작 번호:끝 번호]`에서 끝 번호 부분을 생략하면 시작 번호부터 그 문자열의 끝까지 뽑아낸다.
+```python
+>>> a[5:] 
+', Python World!'
+```
+
+`a[시작 번호:끝 번호]`에서 시작 번호를 생략하면 문자열의 처음부터 끝 번호까지 뽑아낸다.
+```python
+>>> a[:10]
+'Hello, Pyt'
+```
+
+`a[시작 번호:끝 번호]`에서 시작 번호와 끝 번호를 생략하면 문자열의 처음부터 끝까지를 뽑아낸다.
+```python
+>>> a[:]
+'Hello, Python World!'
+```
+
+`a[2:-4]`이 뜻하는 것은 a[2]에서부터 a[-5]까지를 말한다
+```python
+>>> a[2:-4]
+'llo, Python Wo'
+```
+
+문자열 슬라이싱은 아래와 같이 활용할 수 있다.
+```python
+>>> a = "20010331Rainy"
+>>> year = a[:4]
+>>> day = a[4:8]
+>>> weather = a[8:]
+>>> year
+'2001'
+>>> day
+'0331'
+>>> weather
+'Rainy'
+```
+
+```python
+>>> old = "yangsangkil"
+>>> temp1 = old[:8]
+>>> temp2 = old[9:]
+>>> new = temp1 + 'g' + temp2
+>>> new
+'yangsangGil'
+```
+
+## `%`를 사용한 문자열 포맷팅
+---
+문자열 포매팅이랑 문자열안에 특정한 값을 삽입하는 방법을 말한다.
+
+- 숫자 대입  
+숫자를 대입하고 싶은 곳에 `%d`를 입력한 후 삽입할 숫자는 문자열 가장 뒤에 `% + 숫자` 를 쓴다.
+```python
+>>> 'i am %d years old' % 29
+'i am 29 years old'
+```
+
+- 문자 대입  
+숫자와 마찬가지이며 문자의 경우 `%s`를 사용한다.
+```python
+>>> 'i am %s years old' % 'twenty-nine'
+'i am twenty-nine years old'
+```
+
+- 변수 대입  
+변수를 사용하여 대입하며, 변수 타입에 맞춰 문자열 포맷 코드를 작성해주면 된다.
+```python
+>>> number = 29
+>>> 'i am %d years old' % number        
+'i am 29 years old'
+```
+
+- 여러 개 대입
+문자열 안에 여러 개의 값을 삽입하고 싶은 경우, 각각의 변수를 `%` 뒤에 괄호를 하고 내부에서 콤마(`,`)로 구분한다.
+```python
+>>> number = 29
+>>> string = 'handsome'
+>>> 'i am %d years old and very %s' % (number, string)
+'i am 29 years old and very handsome'
+```
+
+|코드|설명|
+|---|---|
+|%s|문자열|
+|%c|문자 1개|
+|%d|정수|
+|%f|부동소수|
+|%o|8진수|
+|%x|16진수|
+|%%|`%` 문자|
+
+특이하게 `%s`는 자동으로 % 뒤에 있는 값을 문자열로 바꾸기 때문에 어떤 형태의 값이든 변환해 넣을 수 있다.
+```python
+>>> 'i have %s handphone' % 1
+'i have 1 handphone'
+>>> 'rate is %s' % 3.24
+'rate is 3.24'
+>>> 'Error is %d%%.' % 98
+'Error is 98%.'
+```
+
+### 문자열 포맷팅 응용
+---
+- 정렬과 공백  
+문자열 포맷팅 사이의 숫자는 전체 길이를 의미하며 나머지 공간은 공백처리 한다.   
++는 오른쪽 정렬, -는 왼쪽 정렬을 의미한다.
+```python
+>>> '%10s' % 'hi'    # 전체 길이가 10개인 공간에서 오른쪽 정렬 후 공백
+'        hi'
+
+>>> '%-10s' % 'hi'   # 전체 길이가 10개인 공간에서 왼쪽 정렬 후 공백
+'hi        '
+```
+- 소수점  
+`.` 앞의 숫자는 전체 숫자의 개수를 의미하며 나머지 공간은 공백처리 한다.(0이면 공백 미존재)  
+`.` 의 의미는 소수점 포인트를 말하며 그 뒤의 숫자는 소수점 뒤에 나올 숫자의 개수를 의미한다.  
++는 오른쪽 정렬, -는 왼쪽 정렬을 의미한다.
+
+```python
+>>> '%0.4f' % 3.245546  
+'3.2455'
+
+>>> '%10.4f' % 3.245546    # 전체 길이가 10개인 공간에서 소수점 4자리까지 오른쪽 정렬 후 공백
+'    3.2455'
+
+>>> '%-10.4f' % 3.245546   # 전체 길이가 10개인 공간에서 소수점 4자리까지 왼쪽 정렬 후 공백
+'3.2455    '
+```
+
+## format 함수를 사용한 포맷팅
+---
+숫자를 대입하고 싶은 곳에 `{}`를 입력한 후 삽입할 숫자는 문자열 가장 뒤에 `.format()` 에 인자로 넣는다.
+- 숫자 대입
+```python
+>>> 'i am {0} years old'.format(29)
+'i am 29 years old'
+```
+- 문자 대입
+```python
+>>> 'i am {0} years old'.format('twenty-nine') 
+'i am twenty-nine years old'
+```
+- 변수 대입
+```python
+>>> number = 29
+>>> 'i am {0} years old'.format(number)        
+'i am 29 years old'
+```
+- 여러 개 대입
+문자열 안에 여러 개의 값을 삽입하고 싶은 경우, 변수를 넣을 자리에 `{0}, {1}, {2} ..` 순서로 넣고 `.format()` 함수 인자를 콤마(`,`)로 구분한다.
+```python
+>>> number = 29
+>>> string = 'handsome'
+>>> 'i am {0} years old and very {1}'.format(number, string) 
+'i am 29 years old and very handsome'
+```
+
+숫자 대신 변수를 넣고 `.format()`의 인자로 변수와 값은 함께 넣어도 된다.
+```python
+>>> 'i am {number} years old and very {string}'.format(number=29, string='handsome') 
+'i am 29 years old and very handsome'
+```
+- 정렬과 공백
+기호(`<, >, ^`) 뒤에 있는 숫자는 전체 길이를 의미하면 나머지 공간은 공백처리 한다.  
+`:`와 기호(`<, >, ^`) 사이에 문자가 있다면 해당 문자로 공백을 채운다.  
+`>`는 왼쪽 정렬, `^`는 가운데 정렬, `<`는 오른쪽 정렬을 의미한다.
+```python
+>>> '{0:<10}'.format("hi")
+'hi        '
+
+>>> '{0:>10}'.format("hi")
+'        hi'
+
+>>> '{0:^10}'.format("hi")
+'    hi    '
+
+>>> '{0:-^10}'.format("hi") 
+'----hi----'
+
+>>> '{0:->10}'.format("hi") 
+'--------hi'
+```
+
+- 소수점
+`.` 앞의 숫자는 전체 숫자의 개수를 의미하며 나머지 공간은 공백처리 한다.(0이면 공백 미존재)  
+`.` 의 의미는 소수점 포인트를 말하며 그 뒤의 숫자는 소수점 뒤에 나올 숫자의 개수를 의미한다.   
+`>`는 왼쪽 정렬, `^`는 가운데 정렬, `<`는 오른쪽 정렬을 의미한다.
+```python
+>>> '{0:0.4f}'.format(3.2513587) 
+'3.2514'
+
+>>> '{0:>10.4f}'.format(3.2513587) 
+'    3.2514'
+
+>>> '{0:<10.4f}'.format(3.2513587) 
+'3.2514    '
+
+
+>>> '{{ and }}'.format()
+'{ and }'
+```
+
+## f문자열 포매팅
+---
+문자열 앞에 `f`를 사용하며 대괄호(`{}`) 안에 변수를 넣어준다.
+대괄호(`{}`) 안에는 변수나 숫자, 문자열을 넣을 수 있다.
+```python
+>>> name = '양상길'
+>>> age = 29
+>>> f'나의 이름은 {name}이고 나이는 {age} 입니다.'
+'나의 이름은 양상길이고 나이는 29 입니다.'
+
+>>> age = 29
+>>> f'나는 내년에 {age+1}살이 된다'
+'나는 내년에 30살이 된다'
+```
+
+- 정렬과 공백
+`:` 뒤에 있는 숫자는 전체 숫자의 개수를 의미하며 나머지 공간은 공백처리 한다.
+`:`와 기호(`<, >, ^`) 사이에 문자가 있다면 해당 문자로 공백을 채운다. 
+`>`는 왼쪽 정렬, `^`는 가운데 정렬, `<`는 오른쪽 정렬을 의미한다.(생략 시 왼쪽 정렬)
+```python
+>>> name = '양상길'
+>>> f'{name:10}'
+'양상길       '
+
+>>> f'{"hi":<10}'  
+'hi        '
+
+>>> f'{"hi":>10}'  
+'        hi'
+
+>>> f'{"hi":^10}'  
+'    hi    '
+
+>>> f'{"hi":@<10}' 
+'hi@@@@@@@@'
+```
+
+- 소수점
+`.` 앞의 숫자는 전체 숫자의 개수를 의미하며 나머지 공간은 공백처리 한다.(0이면 공백 미존재)  
+`.` 의 의미는 소수점 포인트를 말하며 그 뒤의 숫자는 소수점 뒤에 나올 숫자의 개수를 의미한다.   
+`>`는 왼쪽 정렬, `^`는 가운데 정렬, `<`는 오른쪽 정렬을 의미한다.
+```python
+>>> y = 3.42134234
+>>> f'{y:0.4f}'
+'3.4213'
+
+>>> f'{3.4213585:10.4f}'
+'    3.4214'
+
+>>> f'{45.551:<9.2f}'
+'45.55    '
+```
+
+`{ }` 를 표한하기 위해서는 다음과 같이 두개를 사용해야 한다.
+```python
+>>> f'{{  }}'
+'{  }'
+```
+
+## 문자열 내장함수
+---
+### count - 문자 갯수 세기
+---
+`count(str)`
+- str 문자(열)의 개수를 반환한다.
+```python
+>>> a = 'hobby'
+>>> a.count('b')
+2
+```
+
+### find - 문자 위치 찾기(1)
+---
+`find(str)`
+- str 문자(열)의 인덱스를 반환한다.
+- str 문자(열)이 여러 개인 경우 가장 낮은 인덱스를 반환한다.
+- 찾지 못할 경우 -1을 반환한다.
+```python
+>>> a = "Python is the best choice"
+>>> a.find('P')
+0
+
+>>> a.find('T')
+-1
+```
+
+### index - 문자 위치 찾기(2)
+---
+`index(str)`
+- str 문자(열)의 인덱스를 반환한다.
+- str 문자(열)이 여러 개인 경우 가장 낮은 인덱스를 반환한다.
+- 찾지 못할 경우 ValueError를 발생한다.
+```python
+>>> a = "Python is the best choice"
+>>> a.index('P')
+0
+
+>>> a.index('k') 
+ Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+ ValueError: substring not found
+```
+
+### join - 문자열 삽입
+---
+`str.join(iterable)`
+- iterable 문자(열)에 str을 삽입한 문자열을 출력한다.
+- iterable에는 문자열로 이루어진 리스트/튜플이나, 단순 문자열 입력이 가능하다.
+```python
+>>> ",".join('abcd')
+'a,b,c,d'
+
+>>> ",".join(['a', 'b', 'c', 'd'])
+'a,b,c,d'
+```
+
+### upper, lower - 대/소문자 변경
+---
+`upper()`
+- 문자(열)을 대문자로 변환한다.
+```python
+>>> a = 'hi'
+>>> a.upper()
+'HI'
+```
+
+`lower()`
+- 문자(열)을 소문자로 변환한다.
+```python
+>>> b = 'HI'
+>>> b.lower()
+'hi'
+```
+
+### lstrip, rstrip, strip - 공백지우기
+---
+`lstrip()`
+- 문자열에서 가장 왼쪽에 있는 한 칸 이상의 연속된 공백들을 지운다.
+```python
+>>> a = " hi "
+>>> a.lstrip()
+'hi '
+```
+
+`rstrip()`
+- 문자열에서 가장 오른쪽에 있는 한 칸 이상의 연속된 공백들을 지운다.
+```python
+>>> a = " hi "
+>>> a.rstrip()  
+' hi'
+```
+
+`strip()`
+- 문자열에서 양쪽에 있는 한 칸 이상의 연속된 공백들을 지운다.
+```python
+>>> a = " hi "
+>>> a.strip()
+'hi'
+```
+
+### replace - 문자열 바꾸기
+---
+`replace(old, new)`
+- old를 new로 바꿔준다.
+```python
+>>> a = "Life is too short"
+>>> a.replace("Life", "Your leg")
+'Your leg is too short'
+```
+
+### split - 문자열 나누기
+---
+`str.split([sep])`
+- sep에 입력된 문자(열)을 이용하여 str 문자열을 분리시킨 후 리스트로 출력한다.
+- sep을 입력하지 않으면 공백을 기준으로 한다.
+```python
+>>> a = "Python is very goood"
+>>> a.split() 
+['Python', 'is', 'very', 'goood']
+
+>>> a='y:s:g'
+>>> a.split(':')
+['y', 's', 'g']
+```
+
+# 리스트
+---
+`리스트명 = [요소1, 요소2, 요소3, ...]`  
+리스트를 만들 때는 대괄호([])로 감싸 주고 요솟값을 쉼표(,)로 구분해 준다.
+```python
+a = []
+b = [1, 2, 3]
+c = ['Life', 'is', 'too', 'beautiful']
+d = [1, 2, 'Yang', 'Sanggil']
+e = [1, 2, 'Yang', ['Sang', 'Gil']]
+```
+
+## 인덱싱과 슬라이싱
+---
+### 인덱싱
+---
+문자열과 마찬가지로 리스트 자료형에서도 인덱싱이 가능하다.  
+`i = [1, 2, 3, 'y', 's', 'g', ['yang', 'sang', 'gil']]` 라는 리스트의 경우 인덱스는 다음과 같다.
+
+|1|2|3|'y'|'s'|'g'|['yang', 'sang', 'gil']|
+|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
+|0|1|2|3|4|5|6|
+|-7|-6|-5|-4|-3|-2|-1|
+
+```python
+>>> i = [1, 2, 3, 'y', 's', 'g', ['yang', 'sang', 'gil']]
+>>> i[0]
+1
+
+>>> i[6]
+['yang', 'sang', 'gil']
+
+>>> i[3]
+'y'
+```
+또한, i[6]과 같이 인덱싱 결과가 리스트일 경우 한 번 더 인덱싱을 사용하여 값을 얻을 수 있다.
+```python
+>>> i[6][0]
+'yang'
+```
+
+### 슬라이싱
+---
+슬라이싱도 사용가능하며 문자열의 슬라이싱과 동일하다.
+|1|2|3|'y'|'s'|'g'|['yang', 'sang', 'gil']|0|
+|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
+|0|1|2|3|4|5|6|7|
+|-8|-7|-6|-5|-4|-3|-2|-1|
+
+```python
+>>> a = [1, 2, 3, 'y', 's', 'g', ['yang', 'sang', 'gil'], 0]
+>>> a[0:2]
+[1, 2]
+
+>>> a[:2]
+[1, 2]
+
+>>> a[3:]
+['y', 's', 'g', ['yang', 'sang', 'gil'], 0]
+
+>>> a[3:][1]
+'s'
+
+>>> a[3:][:3]
+['y', 's', 'g']
+
+>>> a[6][0:]
+['yang', 'sang', 'gil']
+
+>>> a[6][1:2]
+['sang']
+
+>>> a[6][0:2][1]
+'sang'
+```
+
+## 리스트 연산
+---
+문자열과 마찬가지로 연산도 가능하다.
+```python
+>>> a = [1, 2, 3]
+>>> b = [2, 3, 4]
+>>> a + b
+[1, 2, 3, 2, 3, 4]
+
+>>> a = [1, 2, 3]
+>>> b = [4, 5, '6']
+>>> a + b
+[1, 2, 3, 4, 5, '6']
+
+>>> a = [1, 2]
+>>> a * 3
+[1, 2, 1, 2, 1, 2]
+
+>>> a = ['ysg', 0, 1, 2]
+>>> len(a)
+4
+```
+
+### 숫자형->문자열 변환
+---
+```python
+>>> a = [1, 2, 3]
+>>> str(a[0]) + 'Hi'
+'1Hi'
+```
+
+## 리스트 수정/삭제
+---
+리스트는 값을 수정하거나 삭제할 수 있다.
+
+### 리스트 값 수정
+---
+```python
+>>> a = [1, 2, 3]
+>>> a[1] = 0
+>>> a
+[1, 0, 3]
+```
+
+수정하고자 하는 요소의 개수와 수정될 값의 개수가 1:1이 아니어도 수정이 가능하다.
+```python
+>>> list = [0, 1, 2, 3, 4, 5]
+>>> list[0:2] = 10, 20, 30
+>>> list
+[10, 20, 30, 2, 3, 4, 5]
+
+>>> list1 = [0, 1, 2, 3]
+>>> list2 = [0, 1, 2, 3]
+>>> list1[0] = 10, 20
+>>> list2[0:1] = 10, 20
+>>> list1
+[(10, 20), 1, 2, 3]
+>>> list2
+[10, 20, 1, 2, 3]
+```
+
+### 리스트 요소 삭제
+---
+`del` 함수를 이용하여 요소를 삭제할 수 있다.
+```python
+>>> a = [1,2,3,4,5]
+>>> del a[1]
+>>> a
+[1, 3, 4, 5]
+
+>>> a = [1,2,3,4,5]
+>>> del a[:3]
+>>> a
+[4, 5]
+```
+
+## 리스트 관련 함수
+---
+### append - 요소 추가
+---
+`append(x)`
+- 맨 마지막에 `x`를 추가한다.
+```python
+>>> a = [1,2,3]
+>>> a.append(4)
+>>> a
+[1, 2, 3, 4]
+
+>>> a.append('ysg')
+>>> a
+[1, 2, 3, 4, 'ysg']
+
+>>> a.append(['y', 's', 'g'])
+>>> a
+[1, 2, 3, 4, 'ysg', ['y', 's', 'g']]
+```
+### sort - 정렬
+---
+`sort()`
+- 요소를 순서대로 정렬한다.
+```python
+>>> a = [1, 4, 5, 2, 8]
+>>> a.sort()
+>>> a
+[1, 2, 4, 5, 8]
+
+>>> a = ['a', 1, 'd', 5, 2, 'c']
+>>> a.sort()
+ Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+ TypeError: '<' not supported between instances of 'int' and 'str'
+
+>>> a = ['a', 'd', 'c']
+>>> a.sort()
+>>> a
+['a', 'c', 'd']
+```
+
+### reverse - 뒤집기
+---
+`reverse()`
+- 역순으로 뒤집어준다.
+- 정렬 후에 역순으로 정렬이 아니다.
+```python
+>>> a = [1, 5, 6, 9, 2, 0]
+>>> a.reverse()
+>>> a
+[0, 2, 9, 6, 5, 1]
+
+>>> a = ['a', 1, 'd', 5, 2, 'c']
+>>> a.reverse()
+>>> a
+['c', 2, 5, 'd', 1, 'a']
+```
+
+### index - 위치 반환
+---
+`index(x)`
+- x의 값이 있으면 해당 위치의 인덱스를 반환한다.
+- 존재하지 않을 경우 `ValueError`를 반환한다.
+```python
+>>> a = ['a', 1, 'd', 5, 2, 'c']
+>>> a.index(0)
+ Traceback (most recent call last):
+   File "<stdin>", line 1, in <module>
+ ValueError: 0 is not in list
+
+>>> a.index(1)
+1
+>>> a.index('c')
+5
+>>> a.index(5)
+3
+```
+
+### insert - 요소 삽입
+---
+`insert(x, y)`
+- x 번째 위치(인덱스)에 y를 삽입한다.
+```python
+>>> a = [1,2,3,4,5,6]
+>>> a.insert(1, 'a')
+>>> a
+[1, 'a', 2, 3, 4, 5, 6]
+
+>>> a.insert(3, 'b')
+>>> a
+[1, 'a', 2, 'b', 3, 4, 5, 6]
+```
+
+### remove - 요소 제거
+---
+`remove(x)`
+- 가장 먼저 나오는 x 값을 삭제한다.
+```python
+>>> a = [1,2,3,4,1,2,3]
+>>> a.remove(1)
+>>> a
+[2, 3, 4, 1, 2, 3]
+
+>>> a.remove(1)
+>>> a
+[2, 3, 4, 2, 3]
+```
+
+### pop - 요소 꺼내기
+---
+`pop([x])`
+- x가 없을 경우, 맨 마지막 요소를 반환하고 그 요소를 삭제한다.
+- x 번째 인덱스 요소를 반환하고 그 요소를 삭제한다.
+```python
+>>> a = [1,2,3,4]
+>>> a.pop()
+4
+>>> a
+[1, 2, 3]
+
+>>> a = [1,2,3,4,5,6,7,8]
+>>> a.pop(1)
+2
+>>> a
+[1, 3, 4, 5, 6, 7, 8]
+```
+
+### count - 요소의 개수 세기
+---
+`count(x)`
+- x 값이 몇개 있는지 그 개수를 반환한다.
+```python
+>>> a = [1,2,3,4,1,2]
+>>> a.count(1)
+2
+
+>>> a.count(5)
+0
+```
+
+### extend - 확장
+---
+`list.extend(x)`
+- x 에는 리스트만 올 수 있으며 x 리스트를 더한다.
+- list += x 와 동일하다.
+```python
+>>> a = [1,2,3]
+>>> a.extend([4,5])
+>>> a
+[1, 2, 3, 4, 5]
+
+>>> a += [6,7] # a.extend([6,7])
+>>> a
+[1, 2, 3, 4, 5, 6, 7]
+
+>>> a.extend(6)
+ Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+ TypeError: 'int' object is not iterable
+
+>>> a.extend([7])
+>>> a
+[1, 2, 3, 4, 5, 6, 7, 7]
+```
+
+# 튜플
+---
+튜플(tuple)은 리스트와 거의 동일하며 다름 점은 다음과 같다.
+- 리스트는 `[]`로 둘러싸지만 튜플은 `()`로 둘러싼다.
+- 리스트는 요소를 생성, 삭제, 수정할 수 있는지 튜플만 바꿀 수 없다.
+- 1개의 요소만을 가질 때는 요소 뒤에 콤마(`,`)를 사용해야 한다.
+- `()` 생략이 가능하다.
+```python
+>>> t = ()
+>>> t1 = (1,)
+>>> t2 = (1,2,3)
+>>> t3 = 1,2,3
+>>> t4 = ('a', 'b', ('aa', 'bb'))
+```
+
+## 인덱싱과 슬라이싱
+---
+### 인덱싱
+---
+튜플에서도 인덱싱이 가능하다.
+```python
+>>> t1 = (1,2,'a','b')
+>>> t1[0]
+1
+
+>>> t1[3]
+'b'
+```
+
+### 슬라이싱
+---
+슬라이싱도 가능하다.
+```python
+>>> t1 = (1,2,'a','b')
+>>> t1[1:]
+(2, 'a', 'b')
+```
+
+
+## 튜플 연산
+---
+튜플도 연산이 가능하다.
+```python
+>>> t1 = (1,2,'y','s','g')
+>>> t2 = (0, 'a')
+>>> t1 + t2
+(1, 2, 'y', 's', 'g', 0, 'a')
+
+>>> t1 = ('y', 's', 'g')
+>>> t1 * 3
+('y', 's', 'g', 'y', 's', 'g', 'y', 's', 'g')
+
+t1 = 1,2,3,4,5,6,7,8
+>>> len(t1)
+8
+```
+
+
+# 딕셔너리
+---
+`{key1 : Value1, Key2 : Value2 ..}`  
+딕셔너리는 "이름" = "양상길", "생일" = "11월 7일" 와 같이 대응관계를 나타내기 위해 사용하는 자료형이다.  
+리스트, 튜플과 달리 순차적이지 않으며 Key와 Value 형태를 가진다.  
+Key 값은 고유한 값이어야 한다.
+
+```python
+>>> dic = {'name' : 'sanggil', 'age' : 29}
+>>> dic1 = {'list' : [1,2,3]}
+>>> dic2 = {'tuple' : (1,2,3)}
+```
+
+위의 예에서 dic, dic1, dic2의 정보는 다음과 같다.
+|key|value|
+|---|---|
+|name|sanggil|
+|age|29|
+|list|[1,2,3]|
+|tuple|(1,2,3)|
+
+## 딕셔너리 추가/수정/삭제
+---
+### 추가
+---
+`dictionary[key] = value`
+```python
+>>> dic = {1: 'one'}
+>>> dic[2] = 'two'
+>>> dic
+{1: 'one', 2: 'two'}
+
+>>> dic['name'] = 'sanggil'
+>>> dic['age'] = 29
+>>> dic[5] = [1,2,3]
+>>> dic
+{1: 'one', 2: 'two', 'name': 'sanggil', 'age': 29, 5: [1, 2, 3]}
+```
+### 수정
+---
+`dictionary[key] = value`
+```python
+>>> dic = {'age' : 29}
+>>> dic
+{'age': 29}
+
+>>> dic['age'] = 30
+>>> dic
+{'age': 30}
+```
+### 삭제
+---
+`del dictionary[key]`
+```python
+>>> dic = {1: 'one', 'name': 'sanggil'}
+>>> del dic['name']
+>>> dic
+{1: 'one'}
+```
+
+## 딕셔너리 사용
+---
+key값을 통해 value값을 얻을 수 있다.
+```python
+>>> me = {'name' : 'sanggil', 'age' : 29}
+>>> me['name']
+'sanggil'
+>>> me['age']
+29
+>>> me['bb']
+ Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+ KeyError: 'bb'
+```
+
+## 주의사항
+---
+중복되는 Key 값 사용 시, 마지막을 제외한 것들은 무시된다.
+```python
+>>> dic = {1 : 'one', 1 : 1}
+>>> dic
+{1: 1}
+```
+
+또한, Key값은 변하지 않아야 한다. 그러므로 Key값으로 튜플은 사용할 수 있지만 아래와 같이 리스트는 사용할 수 없다.
+```python
+>>> dic = {[1,2,3] : 'list'}
+ Traceback (most recent call last):
+   File "<stdin>", line 1, in <module>
+ TypeError: unhashable type: 'list'
+
+>>> dic = {(1,2,3) : 1}
+>>> dic
+{(1, 2, 3): 1}
+
+>>> dic[(1,2,3)]
+1
+```
+
+## 함수
+---
+### keys - Key 리스트 만들기
+---
+`keys()`
+- 딕셔너리의 Key를 모아 dict_keys 객체로 반환한다.
+```python
+>>> me = {'name' : 'sanggil', 'age' : 29, 'birth' : '1107'}
+>>> me.keys()
+dict_keys(['name', 'age', 'birth'])
+
+>>> for k in me.keys():
+...     print(k)
+...
+name
+age
+birth
+```
+
+`keys()`의 결과를 리스트로 만들 수 있다.
+```python
+>>> list(me.keys())
+['name', 'age', 'birth']
+```
+
+### values - Value 리스트 만들기
+---
+`values()`
+- 딕셔너리의 Value를 모아 dict_values 객체로 반환한다.
+```python
+>>> me = {'name' : 'sanggil', 'age' : 29, 'birth' : '1107'}
+>>> me.values()
+dict_values(['sanggil', 29, '1107'])
+
+>>> for k in me.values():
+...     print(k)
+...
+sanggil
+29
+1107
+```
+
+`values()`의 결과를 리스트로 만들 수 있다.
+```python
+>>> list(me.values())
+['sanggil', 29, '1107']
+```
+
+### items - Key, Value 쌍 얻기
+---
+`items()`
+- 딕셔너리의 Key와 Value의 쌍을 튜플로 모아 dict_items 객체로 반환한다.
+- 마찬가지로 리스트 함수를 이용하여 리스트로 만들 수 있다.
+```python
+me.items()
+dict_items([('name', 'sanggil'), ('age', 29), ('birth', '1107')])
+```
+
+### clear - Key, Value 쌍 지우기
+---
+`clear()`
+- 딕셔너리 안의 모든 요소를 삭제한다.
+```python
+>>> me.clear()
+>>> me
+{}
+```
+
+### get - Key로 Value 얻기
+---
+`get(key)`
+- key에 대응되는 value값을 반환한다.
+- `dic.get('key')` 는 dic['key']와 동일하다.
+```python
+>>> me = {'name' : 'sanggil', 'age' : 29, 'birth' : '1107'}
+>>> me.get('name') # me['name']
+'sanggil'
+>>> me.get('age') #me['age']
+29
+```
+
+dic['key']는 존재하지 않는 key를 사용할 때 오류가 발생하지만, get 함수는 None을 반환한다.
+```python
+>>> print(me.get('aa'))
+None
+```
+
+### in - key 의 존재여부 확인
+---
+`key in dictionary`
+- key 값이 존재할 경우 True, 존재하지 않을 경우 False를 반환한다.
+```python
+>>> me = {'name' : 'sanggil', 'age' : 29, 'birth' : '1107'}
+>>> 'age' in me
+True
+>>> 'nae' in me
+False
+```
+
+
+# 집합 자료형
+---
+집합에 관련된 것을 쉽게 처리하기 위한 자료형이다.  
+`set()` 키워드를 사용하여 만들 수 있다.
+set() 괄호 안에 리스트/튜플이나 문자열을 입력하여 만들 수 있다.  
+반복가능한 자료형으로 생성 가능하다.(숫자형, 문자 여러 개로 생성 불가능)
+```python
+>>> s1 = set()
+>>> s2 = set([1,2,3])
+>>> s2
+{1, 2, 3}
+
+>>> s3 = set("hello")
+>>> s3
+{'e', 'l', 'o', 'h'}
+
+>>> s4 = set((4,2,5))
+>>> s4
+{2, 4, 5}
+
+>>> s4 = set(4,2,'hh','e')
+> Traceback (most recent call last):
+>   File "<stdin>", line 1, in <module>
+> TypeError: set expected at most 1 arguments, got 4
+
+>>> s4 = set(4,2)
+> Traceback (most recent call last):
+>   File "<stdin>", line 1, in <module>
+> TypeError: set expected at most 1 arguments, got 2
+```
+
+집합 자료형(set)은 중복을 허용하지 않으며 순서가 존재하지 않는다. 따라서, 인덱싱으로 값을 얻을 수 없다.  
+인덱싱으로 값을 얻기 위해서는 리스트나 튜플로 변환해야 한다.
+```python
+>>> s1 = set([1,2,3])
+>> l1 = list(s1)
+>>> l1
+[1, 2, 3]
+>>> l1[0]
+1
+
+>>> t1 = tuple(s1)
+>>> t1
+(1, 2, 3)
+>>> t1[0]
+1
+```
+
+## 교집합, 합집합, 차집합
+---
+집합 자료형은 교집합, 합집합, 차집합을 구할 때 유용하게 사용할 수 있다.
+
+### 교집합
+---
+`&` 기호 및 `insertsection()` 함수를 사용한다.
+```python
+>>> s1 = set([1,2,3,4,5,6])
+>>> s2 = set([4,5,6,7,8,9])
+
+>>> s1 & s2
+{4, 5, 6}
+>>> s1.intersection(s2)
+{4, 5, 6}
+```
+
+### 합집합
+---
+`|` 기호 및 `union()` 함수를 사용한다.
+```python
+>>> s1 = set([1,2,3,4,5,6])
+>>> s2 = set([4,5,6,7,8,9])
+
+>>> s1 | s2
+{1, 2, 3, 4, 5, 6, 7, 8, 9}
+>>> s1.union(s2)
+{1, 2, 3, 4, 5, 6, 7, 8, 9}
+```
+
+### 차집합
+---
+`-` 기호 및 `difference()` 함수를 사용한다.
+```python
+>>> s1 = set([1,2,3,4,5,6])
+>>> s2 = set([4,5,6,7,8,9])
+
+>>> s1 - s2
+{1, 2, 3}
+>>> s2 - s1
+{8, 9, 7}
+>>> s1.difference(s2)
+{1, 2, 3}
+>>> s2.difference(s1)
+{8, 9, 7}
+```
+
+## 함수
+---
+### add - 값 1개 추가하기
+---
+`add(x)`
+- x의 값을 집합 자료형에 추가한다.
+```python
+>>> s1 = set('Hello')
+>>> s1.add(4)
+>>> s1
+{4, 'e', 'o', 'l', 'H'}
+```
+### update - 값 여러 개 추가하기
+---
+`update(x)`
+- 반복 가능한 x(리스트, 튜플, 문자열)를 집합 자료형에 추가한다.
+```python
+>>> s1 = set('HI')
+>>> s1.update([4,5,6,7])
+>>> s1
+{4, 5, 6, 7, 'I', 'H'}
+```
+
+### remove - 특정 값 제거하기
+---
+`remove(x)`
+- x 값을 집합 자료형에서 제거한다.
+```python
+>>> s1 = set('HELLO')
+>>> s1.remove('E')
+>>> s1
+{'H', 'O', 'L'}
+```
+
+
+# 불(bool) 자료형
+---
+불(bool) 자료형이란 참(True)과 거짓(False)을 나타내는 자료형이다.  
+- True : 참
+- False : 거짓
+```python
+>>> a = True
+>>> b = False
+>>> type(a)
+<class 'bool'>
+>>> type(b)
+<class 'bool'>
+
+>>> 1 == 1
+True
+>>> 2 < 1
+False
+```
+
+## 자료형의 참/거짓
+---
+자료형에도 참/거짓이 있으며 아래는 자주 사용하는 자료형의 참/거짓이다.  
+비어 있는 자료형은 거짓(False)이며 비어 있지 않으면 참(True)이다.
+|값|참/거짓|
+|---|---|
+|'문자열'|True|
+|""|False|
+|[1,2,3]|True|
+|[]|False|
+|()|False|
+|{}|False|
+|1|True|
+|0|False|
+|None|False|
+
+불(bool) 자료형의 사용 예제는 다음과 같다.
+```python
+>>> a = [1,2,3,4]
+>>> while a:
+...     print(a.pop())
+...
+4
+3
+2
+1
+
+>>> if [] :
+...     print("참")
+... else:
+...     print("거짓")
+...
+거짓
+
+>>> if [1,2]:
+...     print("참")
+... else:
+...     print("거짓")
+...
+참
+```
+
+## 불(bool) 연산
+---
+```python
+>>> bool("python")
+True
+>>> bool("")
+False
+>>> bool(0)
+False
+>>> bool(1)
+True
+>>> bool(3)
+True
+>>> bool([])
+False
+```
+
+# 변수
+---
+`변수 이름 = 변수에 저장할 값`
+변수에 저장된 값을 스스로 판단하여 자료형을 지정하기 때문에 변수 선언 시 자료형을 선언하지 않아도 된다.
+파이썬에서 변수랑 객체를 가리키는 것이다.
+```python
+>>> a = [1,2,3]
+>>> id(a)
+192842888
+```
+위의 경우처럼 변수 선언 시, `[1,2,3]` 값을 가지는 리스트 자료형(객체)이 자동으로 메모리에 생성되고 변수 a는 `[1,2,3]` 리스트가 저장된 메모리의 주소(192842888)를 가리킨다.
+
+## 리스트 복사
+---
+```python
+>>> a = [1,2,3]
+>>> id(a)
+195923208
+
+>>> b = a
+>>> id(a)
+195923208
+>>> id(b)
+195923208
+```
+```python
+>>> a is b
+True
+>>> a == b
+True
+```
+위의 결과 id(a)와 id(b)의 값이 같음을 알 수 있다. 즉 a가 가리키는 대상과 b가 가리키는 대상이 동일하다는 것을 의미힌다. (`is` 의 결과와 `==` 의 결과가 모두 True이다.)
+- `is` : 같은 객체인지 판별
+- `==` : 값이 같은지 판별
+
+또한, a와 b는 같은 리스트를 가리키기 때문에 a의 값이 변경되면 b의 값도 변경된다.
+```python
+>>> a[1] = 4
+>>> a
+[1, 4, 3]
+>>> b
+[1, 4, 3]
+```
+
+그렇다면 똑같은 리스트를 가지는 서로 다른 객체를 만드는 방법에 대해 알아보자.  
+인덱싱(`[:]`)과 copy 모듈을 이용하면 서로 다른 객체를 만들 수 있다.
+- 인덱싱(`[:]`)
+```python
+>>> a = [1,2,3]
+>>> b = a[:]
+>>> a == b
+True
+>>> a is b
+False
+
+>>> a[1] = 4
+>>> a
+[1, 4, 3]
+>>> b
+[1, 2, 3]
+```
+- copy 모듈
+```python
+>>> a = [1,2,3]
+>>> from copy import copy
+>>> b = copy(a)
+>>> a is b
+False
+
+>>> a[1] = 4
+>>> a
+[1, 4, 3]
+>>> b
+[1, 2, 3]
+```
+인덱싱(`[:]`)과 copy 모듈 사용 시, 같은 리스트를 가지는 서로 다른 객체가 만들어진 것을 확인할 수 있다.
+
+## 변수 선언
+---
+아래와 같은 방법으로 다양하게 변수를 선언할 수 있다.
+```python
+>>> a, b = ('python', 'good')
+>>> a
+'python'
+>>> b
+'good'
+
+>>> (a, b) = 'python', 'good'
+>>> a
+'python'
+>>> b
+'good'
+
+>>> (a, b) = ('python', 'good')
+>>> a
+'python'
+>>> b
+'good'
+
+>>> [a, b] = ['python', 'good']
+>>> a
+'python'
+>>> b
+'good'
+
+>>> a = b = [1,2,4]
+>>> a
+[1, 2, 4]
+>>> b
+[1, 2, 4]
+```
+
+위 방법을 이용하여 두 변수의 값을 간단하게 바꿀 수 있다.
+```python
+>>> a = 3
+>>> b = 5
+>>> a, b = b, a
+>>> a
+5
+>>> b
+3
+```
