--- a/_posts/2020-10-08-[React]스타일링.md
+++ b/_posts/2020-10-08-[React]스타일링.md
@@ -11,4 +11,68 @@ category: [React]
 
 <hr>
 
-gygygygy
+
+
+# 컴포넌트 스타일링
+```jsx
+import React from 'react';
+import styled, {css} from 'styled-components';
+
+const Box = styled.div`
+  background: ${props => props.color || 'blue'};
+  padding: 1rem;
+  display: flex;
+
+  width: 1024px;
+  margin: 0 auto;
+  @media (max-width: 1024px) {
+    width: 768px;
+  }
+  @media (max-width: 768px) {
+    width: 100%;
+  }
+`;
+
+const Button = styled.button`
+  background: white;
+  color: black;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  font-size: 1rem;
+  font-weight: 600;
+
+  &:hover {
+    background: rgdb(255, 255, 255, 0.9);
+  }
+
+  ${props => 
+    props.inverted && 
+    css `
+      background: none;
+      border: 2px solid white;
+      color: white;
+      &:hover {
+        background: white;
+        color: black;
+      }
+    `};
+  & + button {
+    margin-left: 1rem;
+  }
+`;
+
+const StyledComponents = () => {
+  return (
+
+    <Box color="black">
+      <Button>안녕하세요</Button>
+      <Button inverted={true}>테두리만</Button>
+    </Box>
+  )
+};
+
+export default StyledComponents;
+```
