--- a/_posts/2020-10-10-[React]성능최적화.md
+++ b/_posts/2020-10-10-[React]성능최적화.md
@@ -11,3 +11,39 @@ category: [React]
 
 <hr>
 
+
+
+# 성능 최적화
+## React.memo
+```jsx
+import React from 'react';
+...
+
+const TodoListItem = ({todo, onRemove, onToggle}) => {
+  ...
+};
+
+export default TodoListItem;
+```
+```jsx
+import React from 'react';
+...
+
+const TodoListItem = ({todo, onRemove, onToggle}) => {
+  ...
+};
+
+export default React.memo(TodoListItem);
+```
+
+## useState 함수형 업데이트
+```jsx
+const onRemove = useCallback(id => {
+  setTodos(todos.filter(todo => todo.id !== id));
+},[todos]);
+```
+```jsx
+const onRemove = useCallback(id => {
+  setTodos(todos => todos.filter(todo => todo.id !== id));
+},[]);
+```
