[Git]Git명령어 수정

--- a/_posts/2020-09-24-[Git]Git명령어.md
+++ b/_posts/2020-09-24-[Git]Git명령어.md
@@ -58,6 +58,13 @@ category: [Git]
 `git remote remove origin`
 - 연결된 원격 저장소 해제
 
+`git remote show origin`
+- 원격 경로의 branch와 정보를 표시
+
+`git remote rm origin`
+- 원격 경로 제거
+
+
 ## 특정 케이스
 ---
 1. github upload(A)
