[Git]Git명령어 수정

--- a/_posts/2020-09-24-[Git]Git명령어.md
+++ b/_posts/2020-09-24-[Git]Git명령어.md
@@ -27,6 +27,10 @@ category: [Git]
 ---
 `git --version`
 - 현재 git 버전
+```
+$ git --version
+git version 2.23.0.windows.1
+```
 
 `git init`
 - 현재 디렉토리에 git 저장소 생성
