--- a/post_back/2020-05-08-[Python]자료형_문자열.md
+++ b/post_back/2020-05-08-[Python]자료형_문자열.md
@@ -10,3 +10,567 @@ category: [Python]
 <!-- more -->
 
 <hr>
+
+
+
+# 문자열
+---
+문자열(String)이란 문자, 단어 등으로 구성된 문자들의 집합을 의미한다.  
+
+## 문자열 선언
+---
+파이썬에서 문자열을 표현하기 위해서는 아래와 같이 4가지 방법이 있다.  
+`큰따옴표(")`, `작은따옴표(')`, `큰따옴표 3개(""")`, `작은따옴표 3개(''')`
+
+```python
+>>> string = "Hello World"
+>>> string = 'Hello World'
+>>> string = """Hello World"""
+>>> string = '''Hello World'''
+>>> string
+'Hello World'
+```
+
+### 문자열에 따옴표 포함
+---
+문자열에 따옴표를 포함하고 싶은 경우가 있다.
+- 작은따옴표 포함  
+작은 따옴표를 포함하기 위해서는 큰따옴표로 문자열을 만든다.
+```python
+>>> test = "Python's favorite food is perl"
+>>> test
+"Python's favorite food is perl"
+```
+- 큰따옴표 포함  
+큰 따옴표를 포함하기 위해서는 작은따옴표로 문자열을 만든다.
+```python
+>>> test = '"Python is very easy." he says.'
+>>> test
+'"Python is very easy." he says.'
+```
+- `\`를 사용하여 따옴표 포함  
+`\'`, `\"` 를 이용하여 문자열에 큰따옴표나 작은따옴표를 포함시킬 수 있다.
+```python
+>>> test = 'python\'s favorite food is perl'
+>>> test
+"python's favorite food is perl"
+>>> test = "\"python is very simple\" he said"
+>>> test
+'"python is very simple" he said'
+```
+
+### 여러 줄의 문자열을 하나의 변수에 선언
+---
+- `\n` 사용
+```python
+>>> multiline = "python \nmultiline is \neasy"
+
+
+>>> multiline = '''
+    python 
+    multiline is 
+    easy
+    '''
+>>> multiline = """
+    python 
+    multiline is 
+    easy
+    """
+>>> print(multiline)
+'''
+python
+multiline is
+easy
+'''
+```
+
+## 문자열 연산
+---
+다른 언어와 달리 파이썬에서는 문자열을 더하거나 곱할 수 있다.
+
+### 문자열 덧셈
+---
+`a + b` 의 경우 a와 b 문자열을 합치라는 의미이다.
+```python
+>>> head = "yang"
+>>> body = "sanggil"
+>>> head + body
+'yangsanggil'
+```
+결과를 보면 알 수 있듯이 문자열 두 개가 `+` 연산으로 인해 합쳐졌다.
+
+### 문자열 곱셈
+---
+`a * 5`의 경우 a 문자열을 5번 반복하라는 의미이다.
+```python
+>>> a = "sanggil"
+>>> a * 2
+'sanggilsanggil'
+```
+결과를 보면 알 수 있듯이 `a`라는 문자열을 2번 반복하라는 의미이다. 
+
+또한, 아래와 같이 응용할 수 있다.
+```python
+>>> a = "=" * 50
+>>> b = "\nPython\n"
+>>> c = "=" * 50
+>>> print(a + b + c)
+'''
+==================================================
+Python
+==================================================
+'''
+```
+
+a = "Life is too short"  
+print(len(a))
+> 17
+
+## 문자열 인덱싱/슬라이싱
+---
+### 인덱싱
+---
+인덱싱이란 무엇인가를 '가리킨다는 의미이다. 다시 말해서 문자열에서 어떤 글자나 특정 위치를 가리키는 것을 말한다.
+
+|H|e|l|l|o|,| |P|y|t|h|o|n|!|
+|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
+|0|1|2|3|4|5|6|7|8|9|10|11|12|13|
+
+파이썬에서 숫자를 셀 때 0부터 센다.
+
+아래 예제에서 처럼 a[1]이라는 것은 a 문자열에서 첫번째 위치에 있는 문자를 의미한다.
+```python
+>>> a = "Hello, Python!"
+>>> a[1]
+'e'
+
+>>> a[8]
+'y'
+```
+
+인덱스 값에 음수를 넣으면 어떻게 될까?
+```python
+>>> a[-1]
+'!'
+
+>>> a[-2]
+'n'
+
+>>> a[-6]
+'y'
+```
+a[-1]의 값은 a[13]의 값과 같고,
+a[-2]의 값은 a[12], a[-6]의 값은 a[8]과 같음을 알 수 있다.
+
+즉, 음수의 경우는 뒤에서부터 숫자를 세며 -1부터 센다.
+
+|H|e|l|l|o|,| |P|y|t|h|o|n|!|
+|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
+|0|1|2|3|4|5|6|7|8|9|10|11|12|13|
+|-14|-13|-12|-11|-10|-9|-8|-7|-6|-5|-4|-3|-2|-1|
+
+### 슬라이싱
+---
+슬라이싱이란 잘라낸다는 의미이다. 다시 말해서, 문자열에서 무엇인가를 잘라내는 것이다.
+
+|H|e|l|l|o|,| |P|y|t|h|o|n| |W|o|r|l|d|!|
+|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
+|0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|
+|-20|-19|-18|-17|-16|-15|-14|-13|-12|-11|-10|-9|-8|-7|-6|-5|-4|-3|-2|-1|
+
+위 문자열에서 `Python`이라는 문자열을 추출하기 위해서 슬라이싱을 사용한다.
+```python
+>>> a = "Hello, Python World!"
+>>> a[7:13] 
+'Python'
+```
+a[7:13]의 의미는 a 문자열에서 7번 문자부터 13번 앞의 문자(12번)까지 추출하는 것을 의미한다.  
+따라서, a[7:13]의 의미는 `7 <= a < 13`와 같다.
+
+`a[시작 번호:끝 번호]`에서 끝 번호 부분을 생략하면 시작 번호부터 그 문자열의 끝까지 뽑아낸다.
+```python
+>>> a[5:] 
+', Python World!'
+```
+
+`a[시작 번호:끝 번호]`에서 시작 번호를 생략하면 문자열의 처음부터 끝 번호까지 뽑아낸다.
+```python
+>>> a[:10]
+'Hello, Pyt'
+```
+
+`a[시작 번호:끝 번호]`에서 시작 번호와 끝 번호를 생략하면 문자열의 처음부터 끝까지를 뽑아낸다.
+```python
+>>> a[:]
+'Hello, Python World!'
+```
+
+`a[2:-4]`이 뜻하는 것은 a[2]에서부터 a[-5]까지를 말한다
+```python
+>>> a[2:-4]
+'llo, Python Wo'
+```
+
+문자열 슬라이싱은 아래와 같이 활용할 수 있다.
+```python
+>>> a = "20010331Rainy"
+>>> year = a[:4]
+>>> day = a[4:8]
+>>> weather = a[8:]
+>>> year
+'2001'
+>>> day
+'0331'
+>>> weather
+'Rainy'
+```
+
+```python
+>>> old = "yangsangkil"
+>>> temp1 = old[:8]
+>>> temp2 = old[9:]
+>>> new = temp1 + 'g' + temp2
+>>> new
+'yangsangGil'
+```
+
+## `%`를 사용한 문자열 포맷팅
+---
+문자열 포매팅이랑 문자열안에 특정한 값을 삽입하는 방법을 말한다.
+
+- 숫자 대입  
+숫자를 대입하고 싶은 곳에 `%d`를 입력한 후 삽입할 숫자는 문자열 가장 뒤에 `% + 숫자` 를 쓴다.
+```python
+>>> 'i am %d years old' % 29
+'i am 29 years old'
+```
+
+- 문자 대입  
+숫자와 마찬가지이며 문자의 경우 `%s`를 사용한다.
+```python
+>>> 'i am %s years old' % 'twenty-nine'
+'i am twenty-nine years old'
+```
+
+- 변수 대입  
+변수를 사용하여 대입하며, 변수 타입에 맞춰 문자열 포맷 코드를 작성해주면 된다.
+```python
+>>> number = 29
+>>> 'i am %d years old' % number        
+'i am 29 years old'
+```
+
+- 여러 개 대입
+문자열 안에 여러 개의 값을 삽입하고 싶은 경우, 각각의 변수를 `%` 뒤에 괄호를 하고 내부에서 콤마(`,`)로 구분한다.
+```python
+>>> number = 29
+>>> string = 'handsome'
+>>> 'i am %d years old and very %s' % (number, string)
+'i am 29 years old and very handsome'
+```
+
+|코드|설명|
+|---|---|
+|%s|문자열|
+|%c|문자 1개|
+|%d|정수|
+|%f|부동소수|
+|%o|8진수|
+|%x|16진수|
+|%%|`%` 문자|
+
+특이하게 `%s`는 자동으로 % 뒤에 있는 값을 문자열로 바꾸기 때문에 어떤 형태의 값이든 변환해 넣을 수 있다.
+```python
+>>> 'i have %s handphone' % 1
+'i have 1 handphone'
+>>> 'rate is %s' % 3.24
+'rate is 3.24'
+>>> 'Error is %d%%.' % 98
+'Error is 98%.'
+```
+
+### 문자열 포맷팅 응용
+---
+- 정렬과 공백  
+문자열 포맷팅 사이의 숫자는 전체 길이를 의미하며 나머지 공간은 공백처리 한다.   
++는 오른쪽 정렬, -는 왼쪽 정렬을 의미한다.
+```python
+>>> '%10s' % 'hi'    # 전체 길이가 10개인 공간에서 오른쪽 정렬 후 공백
+'        hi'
+
+>>> '%-10s' % 'hi'   # 전체 길이가 10개인 공간에서 왼쪽 정렬 후 공백
+'hi        '
+```
+- 소수점  
+`.` 앞의 숫자는 전체 숫자의 개수를 의미하며 나머지 공간은 공백처리 한다.(0이면 공백 미존재)  
+`.` 의 의미는 소수점 포인트를 말하며 그 뒤의 숫자는 소수점 뒤에 나올 숫자의 개수를 의미한다.  
++는 오른쪽 정렬, -는 왼쪽 정렬을 의미한다.
+
+```python
+>>> '%0.4f' % 3.245546  
+'3.2455'
+
+>>> '%10.4f' % 3.245546    # 전체 길이가 10개인 공간에서 소수점 4자리까지 오른쪽 정렬 후 공백
+'    3.2455'
+
+>>> '%-10.4f' % 3.245546   # 전체 길이가 10개인 공간에서 소수점 4자리까지 왼쪽 정렬 후 공백
+'3.2455    '
+```
+
+## format 함수를 사용한 포맷팅
+---
+숫자를 대입하고 싶은 곳에 `{}`를 입력한 후 삽입할 숫자는 문자열 가장 뒤에 `.format()` 에 인자로 넣는다.
+- 숫자 대입
+```python
+>>> 'i am {0} years old'.format(29)
+'i am 29 years old'
+```
+- 문자 대입
+```python
+>>> 'i am {0} years old'.format('twenty-nine') 
+'i am twenty-nine years old'
+```
+- 변수 대입
+```python
+>>> number = 29
+>>> 'i am {0} years old'.format(number)        
+'i am 29 years old'
+```
+- 여러 개 대입
+문자열 안에 여러 개의 값을 삽입하고 싶은 경우, 변수를 넣을 자리에 `{0}, {1}, {2} ..` 순서로 넣고 `.format()` 함수 인자를 콤마(`,`)로 구분한다.
+```python
+>>> number = 29
+>>> string = 'handsome'
+>>> 'i am {0} years old and very {1}'.format(number, string) 
+'i am 29 years old and very handsome'
+```
+
+숫자 대신 변수를 넣고 `.format()`의 인자로 변수와 값은 함께 넣어도 된다.
+```python
+>>> 'i am {number} years old and very {string}'.format(number=29, string='handsome') 
+'i am 29 years old and very handsome'
+```
+- 정렬과 공백
+기호(`<, >, ^`) 뒤에 있는 숫자는 전체 길이를 의미하면 나머지 공간은 공백처리 한다.  
+`:`와 기호(`<, >, ^`) 사이에 문자가 있다면 해당 문자로 공백을 채운다.  
+`>`는 왼쪽 정렬, `^`는 가운데 정렬, `<`는 오른쪽 정렬을 의미한다.
+```python
+>>> '{0:<10}'.format("hi")
+'hi        '
+
+>>> '{0:>10}'.format("hi")
+'        hi'
+
+>>> '{0:^10}'.format("hi")
+'    hi    '
+
+>>> '{0:-^10}'.format("hi") 
+'----hi----'
+
+>>> '{0:->10}'.format("hi") 
+'--------hi'
+```
+
+- 소수점
+`.` 앞의 숫자는 전체 숫자의 개수를 의미하며 나머지 공간은 공백처리 한다.(0이면 공백 미존재)  
+`.` 의 의미는 소수점 포인트를 말하며 그 뒤의 숫자는 소수점 뒤에 나올 숫자의 개수를 의미한다.   
+`>`는 왼쪽 정렬, `^`는 가운데 정렬, `<`는 오른쪽 정렬을 의미한다.
+```python
+>>> '{0:0.4f}'.format(3.2513587) 
+'3.2514'
+
+>>> '{0:>10.4f}'.format(3.2513587) 
+'    3.2514'
+
+>>> '{0:<10.4f}'.format(3.2513587) 
+'3.2514    '
+
+
+>>> '{{ and }}'.format()
+'{ and }'
+```
+
+## f문자열 포매팅
+---
+문자열 앞에 `f`를 사용하며 대괄호(`{}`) 안에 변수를 넣어준다.
+대괄호(`{}`) 안에는 변수나 숫자, 문자열을 넣을 수 있다.
+```python
+>>> name = '양상길'
+>>> age = 29
+>>> f'나의 이름은 {name}이고 나이는 {age} 입니다.'
+'나의 이름은 양상길이고 나이는 29 입니다.'
+
+>>> age = 29
+>>> f'나는 내년에 {age+1}살이 된다'
+'나는 내년에 30살이 된다'
+```
+
+- 정렬과 공백
+`:` 뒤에 있는 숫자는 전체 숫자의 개수를 의미하며 나머지 공간은 공백처리 한다.
+`:`와 기호(`<, >, ^`) 사이에 문자가 있다면 해당 문자로 공백을 채운다. 
+`>`는 왼쪽 정렬, `^`는 가운데 정렬, `<`는 오른쪽 정렬을 의미한다.(생략 시 왼쪽 정렬)
+```python
+>>> name = '양상길'
+>>> f'{name:10}'
+'양상길       '
+
+>>> f'{"hi":<10}'  
+'hi        '
+
+>>> f'{"hi":>10}'  
+'        hi'
+
+>>> f'{"hi":^10}'  
+'    hi    '
+
+>>> f'{"hi":@<10}' 
+'hi@@@@@@@@'
+```
+
+- 소수점
+`.` 앞의 숫자는 전체 숫자의 개수를 의미하며 나머지 공간은 공백처리 한다.(0이면 공백 미존재)  
+`.` 의 의미는 소수점 포인트를 말하며 그 뒤의 숫자는 소수점 뒤에 나올 숫자의 개수를 의미한다.   
+`>`는 왼쪽 정렬, `^`는 가운데 정렬, `<`는 오른쪽 정렬을 의미한다.
+```python
+>>> y = 3.42134234
+>>> f'{y:0.4f}'
+'3.4213'
+
+>>> f'{3.4213585:10.4f}'
+'    3.4214'
+
+>>> f'{45.551:<9.2f}'
+'45.55    '
+```
+
+`{ }` 를 표한하기 위해서는 다음과 같이 두개를 사용해야 한다.
+```python
+>>> f'{{  }}'
+'{  }'
+```
+
+## 문자열 내장함수
+---
+### count - 문자 갯수 세기
+---
+`count(str)`
+- str 문자(열)의 개수를 반환한다.
+```python
+>>> a = 'hobby'
+>>> a.count('b')
+2
+```
+
+### find - 문자 위치 찾기(1)
+---
+`find(str)`
+- str 문자(열)의 인덱스를 반환한다.
+- str 문자(열)이 여러 개인 경우 가장 낮은 인덱스를 반환한다.
+- 찾지 못할 경우 -1을 반환한다.
+```python
+>>> a = "Python is the best choice"
+>>> a.find('P')
+0
+
+>>> a.find('T')
+-1
+```
+
+### index - 문자 위치 찾기(2)
+---
+`index(str)`
+- str 문자(열)의 인덱스를 반환한다.
+- str 문자(열)이 여러 개인 경우 가장 낮은 인덱스를 반환한다.
+- 찾지 못할 경우 ValueError를 발생한다.
+```python
+>>> a = "Python is the best choice"
+>>> a.index('P')
+0
+
+>>> a.index('k') 
+ Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+ ValueError: substring not found
+```
+
+### join - 문자열 삽입
+---
+`str.join(iterable)`
+- iterable 문자(열)에 str을 삽입한 문자열을 출력한다.
+- iterable에는 문자열로 이루어진 리스트/튜플이나, 단순 문자열 입력이 가능하다.
+```python
+>>> ",".join('abcd')
+'a,b,c,d'
+
+>>> ",".join(['a', 'b', 'c', 'd'])
+'a,b,c,d'
+```
+
+### upper, lower - 대/소문자 변경
+---
+`upper()`
+- 문자(열)을 대문자로 변환한다.
+```python
+>>> a = 'hi'
+>>> a.upper()
+'HI'
+```
+
+`lower()`
+- 문자(열)을 소문자로 변환한다.
+```python
+>>> b = 'HI'
+>>> b.lower()
+'hi'
+```
+
+### lstrip, rstrip, strip - 공백지우기
+---
+`lstrip()`
+- 문자열에서 가장 왼쪽에 있는 한 칸 이상의 연속된 공백들을 지운다.
+```python
+>>> a = " hi "
+>>> a.lstrip()
+'hi '
+```
+
+`rstrip()`
+- 문자열에서 가장 오른쪽에 있는 한 칸 이상의 연속된 공백들을 지운다.
+```python
+>>> a = " hi "
+>>> a.rstrip()  
+' hi'
+```
+
+`strip()`
+- 문자열에서 양쪽에 있는 한 칸 이상의 연속된 공백들을 지운다.
+```python
+>>> a = " hi "
+>>> a.strip()
+'hi'
+```
+
+### replace - 문자열 바꾸기
+---
+`replace(old, new)`
+- old를 new로 바꿔준다.
+```python
+>>> a = "Life is too short"
+>>> a.replace("Life", "Your leg")
+'Your leg is too short'
+```
+
+### split - 문자열 나누기
+---
+`str.split([sep])`
+- sep에 입력된 문자(열)을 이용하여 str 문자열을 분리시킨 후 리스트로 출력한다.
+- sep을 입력하지 않으면 공백을 기준으로 한다.
+```python
+>>> a = "Python is very goood"
+>>> a.split() 
+['Python', 'is', 'very', 'goood']
+
+>>> a='y:s:g'
+>>> a.split(':')
+['y', 's', 'g']
+```
