--- a/post_back/2020-05-11-[Python]자료형_리스트.md
+++ b/post_back/2020-05-11-[Python]자료형_리스트.md
@@ -10,3 +10,389 @@ category: [Python]
 <!-- more -->
 
 <hr>
+
+
+
+# 리스트
+---
+`리스트명 = [요소1, 요소2, 요소3, ...]`  
+리스트를 만들 때는 대괄호([])로 감싸 주고 요솟값을 쉼표(,)로 구분해 준다.
+```python
+a = []
+b = [1, 2, 3]
+c = ['Life', 'is', 'too', 'beautiful']
+d = [1, 2, 'Yang', 'Sanggil']
+e = [1, 2, 'Yang', ['Sang', 'Gil']]
+```
+
+## 인덱싱과 슬라이싱
+---
+### 인덱싱
+---
+문자열과 마찬가지로 리스트 자료형에서도 인덱싱이 가능하다.  
+`i = [1, 2, 3, 'y', 's', 'g', ['yang', 'sang', 'gil']]` 라는 리스트의 경우 인덱스는 다음과 같다.
+
+|1|2|3|'y'|'s'|'g'|['yang', 'sang', 'gil']|
+|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
+|0|1|2|3|4|5|6|
+|-7|-6|-5|-4|-3|-2|-1|
+
+```python
+>>> i = [1, 2, 3, 'y', 's', 'g', ['yang', 'sang', 'gil']]
+>>> i[0]
+1
+
+>>> i[6]
+['yang', 'sang', 'gil']
+
+>>> i[3]
+'y'
+```
+또한, i[6]과 같이 인덱싱 결과가 리스트일 경우 한 번 더 인덱싱을 사용하여 값을 얻을 수 있다.
+```python
+>>> i[6][0]
+'yang'
+```
+
+### 슬라이싱
+---
+슬라이싱도 사용가능하며 문자열의 슬라이싱과 동일하다.
+|1|2|3|'y'|'s'|'g'|['yang', 'sang', 'gil']|0|
+|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
+|0|1|2|3|4|5|6|7|
+|-8|-7|-6|-5|-4|-3|-2|-1|
+
+```python
+>>> a = [1, 2, 3, 'y', 's', 'g', ['yang', 'sang', 'gil'], 0]
+>>> a[0:2]
+[1, 2]
+
+>>> a[:2]
+[1, 2]
+
+>>> a[3:]
+['y', 's', 'g', ['yang', 'sang', 'gil'], 0]
+
+>>> a[3:][1]
+'s'
+
+>>> a[3:][:3]
+['y', 's', 'g']
+
+>>> a[6][0:]
+['yang', 'sang', 'gil']
+
+>>> a[6][1:2]
+['sang']
+
+>>> a[6][0:2][1]
+'sang'
+```
+
+## 리스트 연산
+---
+문자열과 마찬가지로 연산도 가능하다.
+```python
+>>> a = [1, 2, 3]
+>>> b = [2, 3, 4]
+>>> a + b
+[1, 2, 3, 2, 3, 4]
+
+>>> a = [1, 2, 3]
+>>> b = [4, 5, '6']
+>>> a + b
+[1, 2, 3, 4, 5, '6']
+
+>>> a = [1, 2]
+>>> a * 3
+[1, 2, 1, 2, 1, 2]
+
+>>> a = ['ysg', 0, 1, 2]
+>>> len(a)
+4
+```
+
+### 숫자형->문자열 변환
+---
+```python
+>>> a = [1, 2, 3]
+>>> str(a[0]) + 'Hi'
+'1Hi'
+```
+
+## 리스트 수정/삭제
+---
+리스트는 값을 수정하거나 삭제할 수 있다.
+
+### 리스트 값 수정
+---
+```python
+>>> a = [1, 2, 3]
+>>> a[1] = 0
+>>> a
+[1, 0, 3]
+```
+
+수정하고자 하는 요소의 개수와 수정될 값의 개수가 1:1이 아니어도 수정이 가능하다.
+```python
+>>> list = [0, 1, 2, 3, 4, 5]
+>>> list[0:2] = 10, 20, 30
+>>> list
+[10, 20, 30, 2, 3, 4, 5]
+
+>>> list1 = [0, 1, 2, 3]
+>>> list2 = [0, 1, 2, 3]
+>>> list1[0] = 10, 20
+>>> list2[0:1] = 10, 20
+>>> list1
+[(10, 20), 1, 2, 3]
+>>> list2
+[10, 20, 1, 2, 3]
+```
+
+### 리스트 요소 삭제
+---
+`del` 함수를 이용하여 요소를 삭제할 수 있다.
+```python
+>>> a = [1,2,3,4,5]
+>>> del a[1]
+>>> a
+[1, 3, 4, 5]
+
+>>> a = [1,2,3,4,5]
+>>> del a[:3]
+>>> a
+[4, 5]
+```
+
+
+## 리스트 복사
+---
+```python
+>>> a = [1,2,3]
+>>> id(a)
+195923208
+
+>>> b = a
+>>> id(a)
+195923208
+>>> id(b)
+195923208
+```
+```python
+>>> a is b
+True
+>>> a == b
+True
+```
+위의 결과 id(a)와 id(b)의 값이 같음을 알 수 있다. 즉 a가 가리키는 대상과 b가 가리키는 대상이 동일하다는 것을 의미힌다. (`is` 의 결과와 `==` 의 결과가 모두 True이다.)
+- `is` : 같은 객체인지 판별
+- `==` : 값이 같은지 판별
+
+또한, a와 b는 같은 리스트를 가리키기 때문에 a의 값이 변경되면 b의 값도 변경된다.
+```python
+>>> a[1] = 4
+>>> a
+[1, 4, 3]
+>>> b
+[1, 4, 3]
+```
+
+그렇다면 똑같은 리스트를 가지는 서로 다른 객체를 만드는 방법에 대해 알아보자.  
+인덱싱(`[:]`)과 copy 모듈을 이용하면 서로 다른 객체를 만들 수 있다.
+- 인덱싱(`[:]`)
+```python
+>>> a = [1,2,3]
+>>> b = a[:]
+>>> a == b
+True
+>>> a is b
+False
+
+>>> a[1] = 4
+>>> a
+[1, 4, 3]
+>>> b
+[1, 2, 3]
+```
+- copy 모듈
+```python
+>>> a = [1,2,3]
+>>> from copy import copy
+>>> b = copy(a)
+>>> a is b
+False
+
+>>> a[1] = 4
+>>> a
+[1, 4, 3]
+>>> b
+[1, 2, 3]
+```
+인덱싱(`[:]`)과 copy 모듈 사용 시, 같은 리스트를 가지는 서로 다른 객체가 만들어진 것을 확인할 수 있다.
+
+## 리스트 관련 함수
+---
+### append - 요소 추가
+---
+`append(x)`
+- 맨 마지막에 `x`를 추가한다.
+```python
+>>> a = [1,2,3]
+>>> a.append(4)
+>>> a
+[1, 2, 3, 4]
+
+>>> a.append('ysg')
+>>> a
+[1, 2, 3, 4, 'ysg']
+
+>>> a.append(['y', 's', 'g'])
+>>> a
+[1, 2, 3, 4, 'ysg', ['y', 's', 'g']]
+```
+### sort - 정렬
+---
+`sort()`
+- 요소를 순서대로 정렬한다.
+```python
+>>> a = [1, 4, 5, 2, 8]
+>>> a.sort()
+>>> a
+[1, 2, 4, 5, 8]
+
+>>> a = ['a', 1, 'd', 5, 2, 'c']
+>>> a.sort()
+ Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+ TypeError: '<' not supported between instances of 'int' and 'str'
+
+>>> a = ['a', 'd', 'c']
+>>> a.sort()
+>>> a
+['a', 'c', 'd']
+```
+
+### reverse - 뒤집기
+---
+`reverse()`
+- 역순으로 뒤집어준다.
+- 정렬 후에 역순으로 정렬이 아니다.
+```python
+>>> a = [1, 5, 6, 9, 2, 0]
+>>> a.reverse()
+>>> a
+[0, 2, 9, 6, 5, 1]
+
+>>> a = ['a', 1, 'd', 5, 2, 'c']
+>>> a.reverse()
+>>> a
+['c', 2, 5, 'd', 1, 'a']
+```
+
+### index - 위치 반환
+---
+`index(x)`
+- x의 값이 있으면 해당 위치의 인덱스를 반환한다.
+- 존재하지 않을 경우 `ValueError`를 반환한다.
+```python
+>>> a = ['a', 1, 'd', 5, 2, 'c']
+>>> a.index(0)
+ Traceback (most recent call last):
+   File "<stdin>", line 1, in <module>
+ ValueError: 0 is not in list
+
+>>> a.index(1)
+1
+>>> a.index('c')
+5
+>>> a.index(5)
+3
+```
+
+### insert - 요소 삽입
+---
+`insert(x, y)`
+- x 번째 위치(인덱스)에 y를 삽입한다.
+```python
+>>> a = [1,2,3,4,5,6]
+>>> a.insert(1, 'a')
+>>> a
+[1, 'a', 2, 3, 4, 5, 6]
+
+>>> a.insert(3, 'b')
+>>> a
+[1, 'a', 2, 'b', 3, 4, 5, 6]
+```
+
+### remove - 요소 제거
+---
+`remove(x)`
+- 가장 먼저 나오는 x 값을 삭제한다.
+```python
+>>> a = [1,2,3,4,1,2,3]
+>>> a.remove(1)
+>>> a
+[2, 3, 4, 1, 2, 3]
+
+>>> a.remove(1)
+>>> a
+[2, 3, 4, 2, 3]
+```
+
+### pop - 요소 꺼내기
+---
+`pop([x])`
+- x가 없을 경우, 맨 마지막 요소를 반환하고 그 요소를 삭제한다.
+- x 번째 인덱스 요소를 반환하고 그 요소를 삭제한다.
+```python
+>>> a = [1,2,3,4]
+>>> a.pop()
+4
+>>> a
+[1, 2, 3]
+
+>>> a = [1,2,3,4,5,6,7,8]
+>>> a.pop(1)
+2
+>>> a
+[1, 3, 4, 5, 6, 7, 8]
+```
+
+### count - 요소의 개수 세기
+---
+`count(x)`
+- x 값이 몇개 있는지 그 개수를 반환한다.
+```python
+>>> a = [1,2,3,4,1,2]
+>>> a.count(1)
+2
+
+>>> a.count(5)
+0
+```
+
+### extend - 확장
+---
+`list.extend(x)`
+- x 에는 리스트만 올 수 있으며 x 리스트를 더한다.
+- list += x 와 동일하다.
+```python
+>>> a = [1,2,3]
+>>> a.extend([4,5])
+>>> a
+[1, 2, 3, 4, 5]
+
+>>> a += [6,7] # a.extend([6,7])
+>>> a
+[1, 2, 3, 4, 5, 6, 7]
+
+>>> a.extend(6)
+ Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+ TypeError: 'int' object is not iterable
+
+>>> a.extend([7])
+>>> a
+[1, 2, 3, 4, 5, 6, 7, 7]
+```
