--- a/post_back/2023-11-10-[JAVA]조건문.md
+++ b/post_back/2023-11-10-[JAVA]조건문.md
@@ -28,7 +28,7 @@ if (score < 90) {
 ### if ~ else 문
 ---
 
-if 문은 else 블록과 함께 사용되며 조건식의 결과가 true면 if 문의 블록이 실행되고, false면 else 문의 블록이 실행된다.
+조건식의 결과가 true면 `if 문`의 블록이 실행되고, false면 `else 문`의 블록이 실행된다.
 
 ```java
 int score = 83;
@@ -51,7 +51,7 @@ if (score >= 90) {
 ### if ~ else if ~ else 문
 ---
 
-조건문이 여러 개인 if 문이며 처음 if 문의 결과가 false일 경우 else if 문의 실행 블록을 선택할 수 있다.
+조건문이 여러 개인 `if 문`이며 처음 `if 문`의 결과가 false일 경우 `else if 문`의 실행 블록을 선택할 수 있다.`
 
 ```java
 int score = 75;
@@ -78,10 +78,9 @@ if (score >= 90) {
 ### 중첩 if 문
 ---
 
-if 문의 블록 내부에는 또 다른 if 문을 사용할 수 있다.
+`if 문`의 블록 내부에는 또 다른 `if 문`을 사용할 수 있다.
 
 ```java
-
 int score = 81;
 String grade;
 
@@ -113,7 +112,7 @@ System.out.println("학점: " + grade);
 ### switch 문
 ---
 
-if 문처럼 조건식이 true인 경우에 블록 내부의 실행문을 실행하는 것이 아니라, 변수가 어떤 값을 갖느냐에 따라 실행문이 선택된다. 만약 조건에 맞는 case가 없으면 default 문으로 이동한다.
+`if 문`처럼 조건식이 true인 경우에 블록 내부의 실행문을 실행하는 것이 아니라, 변수가 어떤 값을 갖느냐에 따라 실행문이 선택된다. 만약 조건에 맞는 case가 없으면 default 문으로 이동한다.
 
 - case 문 끝에 break를 반드시 추가해야한다.
 - 조건 식의 결과값은 항상 정수/문자열이어야 한다.
