--- a/post_back/2023-11-10-[JAVA]반복문.md
+++ b/post_back/2023-11-10-[JAVA]반복문.md
@@ -47,7 +47,7 @@ System.out.println("1 ~ 100 합: " + sum);
 
 ```java
 for (String str : list) {
-    	System.out.println(str);
+    System.out.println(str);
 }
 ```
 
@@ -64,7 +64,6 @@ list.add("나는3번");
 for (String str : list) {            	
     System.out.println(str);            
 }
-
 ```
 <br>
 
@@ -100,8 +99,7 @@ while(i <= 100) {
     i++;
 }
 
-System.out.println("1 ~ " + (i - 1) + " 합: " + sum)
-
+System.out.println("1 ~ " + (i - 1) + " 합: " + sum);
 ```
 
 <br>
@@ -122,7 +120,7 @@ System.out.println("1 ~ " + (i - 1) + " 합: " + sum)
 ```java
 do {
 	... // "처음 한 번"은 무조건 실행됨.
-} while (조건식) ; // ';' 필수이니 꼭 기억해야한다.
+} while (조건식); // ';' 필수이니 꼭 기억해야한다.
 ```
 
 <br>
