--- a/post_back/2023-11-11-[JAVA]배열.md
+++ b/post_back/2023-11-11-[JAVA]배열.md
@@ -43,3 +43,44 @@ int[] intArray = new int[5];
 String[] strArray = null;
 strArray = new String[5];
 ```
+
+<br>
+
+그리고 다음과 같이 초기화할 수 있다.
+
+```java
+int[] score = new int[5];
+score[0] = 50 ;
+score[1] = 60 ;
+score[2] = 70 ;
+score[3] = 80 ;
+score[4] = 90 ;
+
+//반복문 활용
+int[] score = new int[5];
+for (int i = 0 ; i < score.length ; i++) {
+    score[i] = i *10 +50
+}
+
+//값의 개수에 의해 배열의 길이 자동 결정
+int[] score = new int[]{ 50, 60, 70, 80, 90 };
+```
+
+<br>
+
+### 길이
+---
+
+배열의 길이란 배열에 저장할 수 잇는 전체 항목 수를 말한다.
+
+```java
+int[] intArray = {10, 20, 30};
+
+System.out.println(intArray.length); 
+```
+
+<br>
+
+```
+3
+```
