--- a/post_back/2023-11-11-[JAVA]배열.md
+++ b/post_back/2023-11-11-[JAVA]배열.md
@@ -9,7 +9,7 @@
 
 <br>
 
-### 선언
+### 배열 선언
 ---
 
 아래와 같은 방법으로 선언할 수 있다.
@@ -22,7 +22,7 @@ int intArray[];
 
 <br>
 
-### 생성 및 초기화
+### 베열 생성 및 초기화
 ---
 
 배열 항목에 저장될 값의 목록을 가지고 있다면, 다음과 같이 배열 객체를 선언하고 초기화할 수 있다.
@@ -68,7 +68,7 @@ int[] score = new int[]{ 50, 60, 70, 80, 90 };
 
 <br>
 
-### 길이
+### 배열 길이
 ---
 
 배열의 길이란 배열에 저장할 수 잇는 전체 항목 수를 말한다.
@@ -76,11 +76,25 @@ int[] score = new int[]{ 50, 60, 70, 80, 90 };
 ```java
 int[] intArray = {10, 20, 30};
 
-System.out.println(intArray.length); 
+System.out.println(intArray.length);  // 3
 ```
 
 <br>
 
-```
-3
+
+### 배열 출력
+---
+
+배열 각 요소의 값을 출력하기 위해서는 for 문을 이용해서 배열 각 원소들을 순회하여 출력하도록 하드코딩 해주거나, 아니면 자바에서 제공해주는 Arrays.toString() 메서드를 이용해서 배열을 문자열 형식으로 만들어 출력할 수도 있다.
+
+```java
+ int[] iArr = {100, 95, 80, 70, 60};
+        
+// 루프문으로 직접 배열 원소 출력
+for(int i = 0 ; i < iArr.length; i++){
+    System.out.println(iArr[i]);  // 100, 95, 80, 70, 60
+}
+
+// Arrays.toString() 메서드 사용하여 심플하게 바로 출력
+System.out.println(Arrays.toString(iArr));  // [100, 95, 80, 70, 60]
 ```
