파일 추가/수정

--- a/post_back/2023-11-28-[Mysql]시간 더하기빼기.md
+++ b/post_back/2023-11-28-[Mysql]시간 더하기빼기.md
@@ -9,6 +9,10 @@
 
 `DATE_ADD` 는 기준 날짜에 입력된 기간만큼 더하는 함수이다.
 
+```sql
+DATE_ADD(기준 날짜, INTERVAL)
+```
+
 <br>
 
 #### 1초 더하기
@@ -100,6 +104,10 @@ SELECT DATE_ADD(NOW(), INTERVAL 1 YEAR);
 ---
 
 `DATE_SUB` 는 기준 날짜에 입력된 기간만큼 뺴는 함수이다.
+
+```sql
+DATE_SUB(기준 날짜, INTERVAL)
+```
 
 <br>
 
