--- a/post_back/2023-11-28-[Mysql]시간 더하기빼기.md
+++ b/post_back/2023-11-28-[Mysql]시간 더하기빼기.md
@@ -1,6 +1,6 @@
 ## 시간 더하기 / 빼기 (DATE_ADD / DATE_SUB)
 
-특정 시간을 기준으로 시간을 더하거나 빼는 경우에 `DATE_ADD` / `DATE_SUB` 함수를 사용한다.
+Mysql에서 특정 시간을 기준으로 시간을 더하거나 빼는 경우 `DATE_ADD` / `DATE_SUB` 함수를 사용한다.
 
 <br>
 
