--- a/post_back/2020-05-08-[Python]자료형_문자열 내장함수.md
+++ b/post_back/2020-05-08-[Python]자료형_문자열 내장함수.md
@@ -1,129 +1,209 @@
 
 
-
-
 ## 문자열 내장함수
----
+
+
 ### count - 문자 갯수 세기
 ---
+
 `count(str)`
 - str 문자(열)의 개수를 반환한다.
+  
 ```python
->>> a = 'hobby'
->>> a.count('b')
+a = 'hobby'
+print(a.count('b'))
+```
+
+```text
 2
 ```
 
+<br>
+
 ### find - 문자 위치 찾기(1)
 ---
+
 `find(str)`
 - str 문자(열)의 인덱스를 반환한다.
 - str 문자(열)이 여러 개인 경우 가장 낮은 인덱스를 반환한다.
 - 찾지 못할 경우 -1을 반환한다.
-```python
->>> a = "Python is the best choice"
->>> a.find('P')
-0
 
->>> a.find('T')
+
+```python
+a = "Python is the best choice"
+print(a.find('P'))
+print(a.find('T'))
+```
+
+```text
+0
 -1
 ```
 
+<br>
+
 ### index - 문자 위치 찾기(2)
 ---
+
 `index(str)`
 - str 문자(열)의 인덱스를 반환한다.
 - str 문자(열)이 여러 개인 경우 가장 낮은 인덱스를 반환한다.
 - 찾지 못할 경우 ValueError를 발생한다.
+
+
 ```python
->>> a = "Python is the best choice"
->>> a.index('P')
+a = "Python is the best choice"
+print(a.index('P'))
+
+print(a.index('k'))
+```
+
+```text
 0
 
->>> a.index('k') 
  Traceback (most recent call last):
   File "<stdin>", line 1, in <module>
  ValueError: substring not found
 ```
 
+<br>
+
 ### join - 문자열 삽입
 ---
+
 `str.join(iterable)`
 - iterable 문자(열)에 str을 삽입한 문자열을 출력한다.
 - iterable에는 문자열로 이루어진 리스트/튜플이나, 단순 문자열 입력이 가능하다.
-```python
->>> ",".join('abcd')
-'a,b,c,d'
 
->>> ",".join(['a', 'b', 'c', 'd'])
+
+```python
+print(",".join('abcd'))
+print(",".join(['a', 'b', 'c', 'd']))
+```
+
+```text
+'a,b,c,d'
 'a,b,c,d'
 ```
+
+<br>
 
 ### upper, lower - 대/소문자 변경
 ---
+
 `upper()`
 - 문자(열)을 대문자로 변환한다.
+
+
 ```python
->>> a = 'hi'
->>> a.upper()
+a = 'hi'
+print(a.upper())
+```
+
+```text
 'HI'
 ```
 
+<br>
+<br>
+
 `lower()`
 - 문자(열)을 소문자로 변환한다.
+
+
 ```python
->>> b = 'HI'
->>> b.lower()
+b = 'HI'
+print(b.lower())
+```
+
+```text
 'hi'
 ```
+
+<br>
 
 ### lstrip, rstrip, strip - 공백지우기
 ---
+
 `lstrip()`
 - 문자열에서 가장 왼쪽에 있는 한 칸 이상의 연속된 공백들을 지운다.
+
+
 ```python
->>> a = " hi "
->>> a.lstrip()
+a = " hi "
+print(a.lstrip())
+```
+
+```text
 'hi '
 ```
 
+<br>
+<br>
+
 `rstrip()`
 - 문자열에서 가장 오른쪽에 있는 한 칸 이상의 연속된 공백들을 지운다.
+  
 ```python
->>> a = " hi "
->>> a.rstrip()  
+a = " hi "
+print(a.rstrip())
+```
+
+```text
 ' hi'
 ```
 
+<br>
+<br>
+
 `strip()`
 - 문자열에서 양쪽에 있는 한 칸 이상의 연속된 공백들을 지운다.
+
 ```python
->>> a = " hi "
->>> a.strip()
+a = " hi "
+print(a.strip())
+```
+
+```text
 'hi'
 ```
 
+<br>
+
 ### replace - 문자열 바꾸기
 ---
+
 `replace(old, new)`
 - old를 new로 바꿔준다.
+  
 ```python
->>> a = "Life is too short"
->>> a.replace("Life", "Your leg")
+a = "Life is too short"
+print(a.replace("Life", "Your leg"))
+```
+
+```text
 'Your leg is too short'
 ```
 
+<br>
+
 ### split - 문자열 나누기
 ---
+
 `str.split([sep])`
 - sep에 입력된 문자(열)을 이용하여 str 문자열을 분리시킨 후 리스트로 출력한다.
 - sep을 입력하지 않으면 공백을 기준으로 한다.
+
 ```python
->>> a = "Python is very goood"
->>> a.split() 
+a = "Python is very goood"
+print(a.split()) 
+
+a='y:s:g'
+print(a.split(':'))
+```
+
+```text
 ['Python', 'is', 'very', 'goood']
 
->>> a='y:s:g'
->>> a.split(':')
 ['y', 's', 'g']
 ```
