--- a/tistory/2020-05-11-[Python]자료형_리스트 내장함수.md
+++ b/tistory/2020-05-11-[Python]자료형_리스트 내장함수.md
@@ -1,167 +1,245 @@
 
 
-## 리스트 관련 함수
+## 리스트 함수
+
+파이썬 리스트 함수로는 append, sort, reverse, index, insert, remove, pop, count, extend 가 있다.
+
+<br>
 
 ### append - 요소 추가
 ---
+
 `append(x)`
 - 맨 마지막에 `x`를 추가한다.
+  
 ```python
 a = [1,2,3]
 a.append(4)
-a
-[1, 2, 3, 4]
+print(a)
 
 a.append('ysg')
-a
-[1, 2, 3, 4, 'ysg']
+print(a)
 
 a.append(['y', 's', 'g'])
-a
+print(a)
+```
+
+```text
+[1, 2, 3, 4]
+
+[1, 2, 3, 4, 'ysg']
+
 [1, 2, 3, 4, 'ysg', ['y', 's', 'g']]
 ```
+
+
+<br>
+
 ### sort - 정렬
 ---
+
 `sort()`
 - 요소를 순서대로 정렬한다.
+  
 ```python
 a = [1, 4, 5, 2, 8]
 a.sort()
-a
-[1, 2, 4, 5, 8]
+print(a)
 
 a = ['a', 1, 'd', 5, 2, 'c']
 a.sort()
- Traceback (most recent call last):
-  File "<stdin>", line 1, in <module>
- TypeError: '<' not supported between instances of 'int' and 'str'
 
 a = ['a', 'd', 'c']
 a.sort()
-a
+print(a)
+```
+
+```text
+[1, 2, 4, 5, 8]
+
+Traceback (most recent call last):
+ File "<stdin>", line 1, in <module>
+TypeError: '<' not supported between instances of 'int' and'str'
+
 ['a', 'c', 'd']
 ```
 
+<br>
+
 ### reverse - 뒤집기
 ---
+
 `reverse()`
 - 역순으로 뒤집어준다.
 - 정렬 후에 역순으로 정렬이 아니다.
+
 ```python
 a = [1, 5, 6, 9, 2, 0]
 a.reverse()
-a
-[0, 2, 9, 6, 5, 1]
+print(a)
 
 a = ['a', 1, 'd', 5, 2, 'c']
 a.reverse()
-a
+print(a)
+```
+
+```text
+[0, 2, 9, 6, 5, 1]
+
 ['c', 2, 5, 'd', 1, 'a']
 ```
 
+<br>
+
 ### index - 위치 반환
 ---
+
 `index(x)`
 - x의 값이 있으면 해당 위치의 인덱스를 반환한다.
 - 존재하지 않을 경우 `ValueError`를 반환한다.
+  
 ```python
 a = ['a', 1, 'd', 5, 2, 'c']
-a.index(0)
- Traceback (most recent call last):
-   File "<stdin>", line 1, in <module>
- ValueError: 0 is not in list
+print(a.index(0))
 
-a.index(1)
+print(a.index(1))
+print(a.index('c'))
+print(a.index(5))
+```
+
+```text
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+ValueError: 0 is not in list
+
 1
-a.index('c')
 5
-a.index(5)
 3
 ```
 
+<br>
+
 ### insert - 요소 삽입
 ---
+
 `insert(x, y)`
 - x 번째 위치(인덱스)에 y를 삽입한다.
+
 ```python
 a = [1,2,3,4,5,6]
 a.insert(1, 'a')
-a
-[1, 'a', 2, 3, 4, 5, 6]
+print(a)
 
 a.insert(3, 'b')
-a
+print(a)
+```
+
+```text
+[1, 'a', 2, 3, 4, 5, 6]
+
 [1, 'a', 2, 'b', 3, 4, 5, 6]
 ```
 
+<br>
+
 ### remove - 요소 제거
 ---
+
 `remove(x)`
 - 가장 먼저 나오는 x 값을 삭제한다.
+  
 ```python
 a = [1,2,3,4,1,2,3]
 a.remove(1)
-a
-[2, 3, 4, 1, 2, 3]
+print(a)
 
 a.remove(1)
-a
+print(a)
+```
+
+```text
+[2, 3, 4, 1, 2, 3]
+
 [2, 3, 4, 2, 3]
 ```
 
+<br>
+
 ### pop - 요소 꺼내기
 ---
+
 `pop([x])`
 - x가 없을 경우, 맨 마지막 요소를 반환하고 그 요소를 삭제한다.
 - x 번째 인덱스 요소를 반환하고 그 요소를 삭제한다.
+  
 ```python
 a = [1,2,3,4]
 a.pop()
-4
-a
-[1, 2, 3]
+print(a)
 
 a = [1,2,3,4,5,6,7,8]
 a.pop(1)
+print(a)
+```
+
+```text
+4
+[1, 2, 3]
+
 2
-a
 [1, 3, 4, 5, 6, 7, 8]
 ```
 
+<br>
+
 ### count - 요소의 개수 세기
 ---
+
 `count(x)`
 - x 값이 몇개 있는지 그 개수를 반환한다.
+  
 ```python
 a = [1,2,3,4,1,2]
 a.count(1)
-2
-
 a.count(5)
+```
+
+```text
+2
 0
 ```
 
+<br>
+
 ### extend - 확장
 ---
+
 `list.extend(x)`
 - x 에는 리스트만 올 수 있으며 x 리스트를 더한다.
 - list += x 와 동일하다.
+  
 ```python
 a = [1,2,3]
 a.extend([4,5])
-a
-[1, 2, 3, 4, 5]
+print(a)
 
 a += [6,7] # a.extend([6,7])
-a
-[1, 2, 3, 4, 5, 6, 7]
+print(a)
 
 a.extend(6)
- Traceback (most recent call last):
-  File "<stdin>", line 1, in <module>
- TypeError: 'int' object is not iterable
 
 a.extend([7])
-a
+print(a)
+```
+
+```text
+[1, 2, 3, 4, 5]
+
+[1, 2, 3, 4, 5, 6, 7]
+
+Traceback (most recent call last):
+ File "<stdin>", line 1, in <module>
+TypeError: 'int' object is not iterable
+
 [1, 2, 3, 4, 5, 6, 7, 7]
 ```
