--- a/tistory/2020-05-17-[Python]자료형_딕셔너리 함수.md
+++ b/tistory/2020-05-17-[Python]자료형_딕셔너리 함수.md
@@ -1,100 +1,158 @@
 
 
-## 함수
----
+## 딕셔너리 함수
+
+
 ### keys - Key 리스트 만들기
 ---
+
 `keys()`
 - 딕셔너리의 Key를 모아 dict_keys 객체로 반환한다.
+  
 ```python
 me = {'name' : 'sanggil', 'age' : 29, 'birth' : '1107'}
-me.keys()
-dict_keys(['name', 'age', 'birth'])
+print(me.keys())
 
 for k in me.keys():
-...     print(k)
-...
+     print(k)
+```
+
+```text
+dict_keys(['name', 'age', 'birth'])
+
 name
 age
 birth
 ```
 
+<br>
+
 `keys()`의 결과를 리스트로 만들 수 있다.
+
 ```python
-list(me.keys())
+print(list(me.keys()))
+```
+
+```text
 ['name', 'age', 'birth']
 ```
 
+<br>
+
 ### values - Value 리스트 만들기
 ---
+
 `values()`
 - 딕셔너리의 Value를 모아 dict_values 객체로 반환한다.
+  
 ```python
 me = {'name' : 'sanggil', 'age' : 29, 'birth' : '1107'}
-me.values()
-dict_values(['sanggil', 29, '1107'])
+print(me.values())
 
 for k in me.values():
-...     print(k)
-...
+     print(k)
+```
+
+```text
+dict_values(['sanggil', 29, '1107'])
+
 sanggil
 29
 1107
 ```
 
+<br>
+
 `values()`의 결과를 리스트로 만들 수 있다.
+
 ```python
-list(me.values())
+print(list(me.values()))
+```
+
+```text
 ['sanggil', 29, '1107']
 ```
 
+<br>
+
 ### items - Key, Value 쌍 얻기
 ---
+
 `items()`
 - 딕셔너리의 Key와 Value의 쌍을 튜플로 모아 dict_items 객체로 반환한다.
 - 마찬가지로 리스트 함수를 이용하여 리스트로 만들 수 있다.
+  
 ```python
-me.items()
+me = {'name' : 'sanggil', 'age' : 29, 'birth' : '1107'}
+
+print(me.items())
+```
+
+```text
 dict_items([('name', 'sanggil'), ('age', 29), ('birth', '1107')])
 ```
 
+<br>
+
 ### clear - Key, Value 쌍 지우기
 ---
+
 `clear()`
 - 딕셔너리 안의 모든 요소를 삭제한다.
+  
 ```python
 me.clear()
-me
-{}
 ```
+
+<br>
 
 ### get - Key로 Value 얻기
 ---
+
 `get(key)`
 - key에 대응되는 value값을 반환한다.
 - `dic.get('key')` 는 dic['key']와 동일하다.
+  
 ```python
 me = {'name' : 'sanggil', 'age' : 29, 'birth' : '1107'}
-me.get('name') # me['name']
-'sanggil'
-me.get('age') #me['age']
+
+print(me.get('name')) # me['name']
+print(me.get('age')) #me['age']
+```
+
+```text
+sanggil
 29
 ```
 
+<br>
+
 dic['key']는 존재하지 않는 key를 사용할 때 오류가 발생하지만, get 함수는 None을 반환한다.
+
 ```python
 print(me.get('aa'))
+```
+
+```text
 None
 ```
 
+<br>
+
 ### in - key 의 존재여부 확인
 ---
+
 `key in dictionary`
 - key 값이 존재할 경우 True, 존재하지 않을 경우 False를 반환한다.
+  
 ```python
 me = {'name' : 'sanggil', 'age' : 29, 'birth' : '1107'}
-'age' in me
+
+print('age' in me)
+print('nae' in me)
+```
+
+```text
 True
-'nae' in me
 False
 ```
