--- a/tistory/2020-05-17-[Python]자료형_집합자료형 함수.md
+++ b/tistory/2020-05-17-[Python]자료형_집합자료형 함수.md
@@ -1,37 +1,62 @@
 
 
+## 집합 자료형 함수
 
+파이썬 집합 자료형 함수로는 add, update, remove 가 있다.
 
-## 함수
----
+<br>
+
 ### add - 값 1개 추가하기
 ---
+
 `add(x)`
 - x의 값을 집합 자료형에 추가한다.
+  
 ```python
 s1 = set('Hello')
 s1.add(4)
-s1
+
+print(s1)
+```
+
+```text
 {4, 'e', 'o', 'l', 'H'}
 ```
+
+<br>
+
 ### update - 값 여러 개 추가하기
 ---
+
 `update(x)`
 - 반복 가능한 x(리스트, 튜플, 문자열)를 집합 자료형에 추가한다.
+  
 ```python
 s1 = set('HI')
 s1.update([4,5,6,7])
-s1
+
+print(s1)
+```
+
+```text
 {4, 5, 6, 7, 'I', 'H'}
 ```
 
+<br>
+
 ### remove - 특정 값 제거하기
 ---
+
 `remove(x)`
 - x 값을 집합 자료형에서 제거한다.
+  
 ```python
 s1 = set('HELLO')
 s1.remove('E')
-s1
+
+print(s1)
+```
+
+```text
 {'H', 'O', 'L'}
 ```
