--- a/post_back/2024-01-10-[알고리즘]버블정렬.md
+++ b/post_back/2024-01-10-[알고리즘]버블정렬.md
@@ -7,3 +7,28 @@ category: [알고리즘]
 버블정렬에 대해 알아보자
 <!-- more -->
 <hr>  
+
+```python
+def bubble_sort(arr):
+    for i in range(len(arr) - 1, 0, -1):
+        for j in range(i):
+            if arr[j] > arr[j + 1]:
+                arr[j], arr[j + 1] = arr[j + 1], arr[j]
+```
+```java
+public static void sort(int[] arr) {
+    for (int i = arr.length - 1; i > 0; i--) {
+        for (int j = 0; j <= i; j++) {
+            if (arr[j] > arr[j + 1])
+                swap(arr, j, j + 1);
+        }
+    }
+}
+
+private static void swap(int[] arr, int a, int b) {
+    int tmp = arr[a];
+    arr[a] = arr[b];
+    arr[b] = tmp;
+}
+
+```
