--- a/post_back/2024-01-10-[알고리즘]삽입정렬.md
+++ b/post_back/2024-01-10-[알고리즘]삽입정렬.md
@@ -44,3 +44,26 @@ key값 16과 네 번째 자료 69를 비교한다. key값이 더 작으므로 69
 key값 16과 세 번째 자료 30을 비교한다. key값이 더 작으므로 30을 네 번째 자리에 넣는다.  
 key값 16과 두 번째 자료 10을 비교한다. key값이 더 크므로  key값을 세 번째 자리에 넣는다.
 <img src="https://sanggil1107.github.io//public/img/알고리즘/삽입정렬4.png" style="display: block;margin: 0 auto;">
+
+```python
+def insertion_sort(arr):
+    for i in range(1, len(array)):
+        for j in range(i, 0, -1): 
+            if array[j] < array[j-1]:
+                array[j], array[j-1] = array[j-1], array[j]
+            else:
+                break
+```
+```java
+public static void insertionSort(int[] arr) {
+   for(int index = 1 ; index < arr.length ; index++){ // 1.
+      int temp = arr[index];
+      int prev = index - 1;
+      while( (prev >= 0) && (arr[prev] > temp) ) {    // 2.
+         arr[prev+1] = arr[prev];
+         prev--;
+      }
+      arr[prev + 1] = temp;                           // 3.
+   }
+}
+```
