--- a/post_back/2024-01-10-[알고리즘]선택정렬.md
+++ b/post_back/2024-01-10-[알고리즘]선택정렬.md
@@ -37,3 +37,31 @@ category: [알고리즘]
 ---
 다섯 번째 위치에 있는 69를 마지막 위치에 있는 30과 자리를 바꾼다.
 <img src="https://sanggil1107.github.io//public/img/알고리즘/선택정렬4.png" style="display: block;margin: 0 auto;">
+
+```python
+def selection_sort(arr):
+    for i in range(len(arr) - 1):
+        min_idx = i
+        for j in range(i + 1, len(arr)):
+            if arr[j] < arr[min_idx]:
+                min_idx = j
+        arr[i], arr[min_idx] = arr[min_idx], arr[i]
+```
+```java
+public static void sort(int[] arr) {
+    for (int i = 0; i < arr.length - 1; i++) {
+        int minIdx = i;
+        for (int j = i + 1; j < arr.length; j++) {
+            if (arr[j] < arr[minIdx])
+                minIdx = j;
+        }
+        swap(arr, i, minIdx);
+    }
+}
+
+private static void swap(int[] arr, int a, int b) {
+    int tmp = arr[a];
+    arr[a] = arr[b];
+    arr[b] = tmp;
+}
+```
