--- a/post_back/2024-01-10-[알고리즘]퀵정렬.md
+++ b/post_back/2024-01-10-[알고리즘]퀵정렬.md
@@ -8,3 +8,70 @@ category: [알고리즘]
 `퀵정렬`에 대해 알아보자
 <!-- more -->
 <hr>
+
+```python
+def quick_sort(array, start, end):
+    if start >= end:
+        return
+    pivot = start #피벗 초기값은 첫번째 요소
+    left = start+1
+    right = end
+    
+    while left <= right:
+        # 피벗보다 큰 데이터를 찾을 때까지 반복
+        while left <= end and array[left] <= array[pivot]:
+            left+=1
+            
+            #피벗보다 작은 데이터를 찾을 때까지 반복
+        while right > start and array[right] >= array[pivot]:
+            right-=1
+            
+        if left>right: # 엇갈렸다면 작은 right -=1 데이터와 피벗을 교체
+            array[right], array[pivot] = array[pivot], array[right]
+            
+        else: # 엇갈리지 않았다면 작은 데이터와 큰 데이터를 교체 
+            array[left], array[right] = array[right], array[left]
+            
+    # 분할 이후 왼쪽 부분과 오른쪽 부분에서 각각 정렬 수행
+    quick_sort(array, start, right-1)
+    quick_sort(array, right+1, end)
+```
+
+```java
+public void quickSort(int[] array, int left, int right) {
+    if(left >= right) return;
+    
+    // 분할 
+    int pivot = partition(); 
+    
+    // 피벗은 제외한 2개의 부분 배열을 대상으로 순환 호출
+    quickSort(array, left, pivot-1);  // 정복(Conquer)
+    quickSort(array, pivot+1, right); // 정복(Conquer)
+}
+
+
+public int partition(int[] array, int left, int right) {
+    /**
+    // 최악의 경우, 개선 방법
+    int mid = (left + right) / 2;
+    swap(array, left, mid);
+    */
+    
+    int pivot = array[left]; // 가장 왼쪽값을 피벗으로 설정
+    int i = left, j = right;
+    
+    while(i < j) {
+        while(pivot < array[j]) {
+            j--;
+        }
+        while(i < j && pivot >= array[i]){
+            i++;
+        }
+        swap(array, i, j);
+    }
+    array[left] = array[i];
+    array[i] = pivot;
+    
+    return i;
+}
+```
